@@ -23,22 +23,21 @@ import com.google.gson.stream.JsonWriter;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import lombok.NonNull;
 import org.jetbrains.annotations.ApiStatus.Internal;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 @Internal
 final class PathTypeAdapter extends TypeAdapter<Path> {
 
   @Override
-  public void write(@NotNull JsonWriter out, @Nullable Path value) throws IOException {
+  public void write(@NonNull JsonWriter out, @Nullable Path value) throws IOException {
     TypeAdapters.STRING.write(out, value == null ? null : value.toString().replace(File.separatorChar, '/'));
   }
 
   @Override
   public @Nullable Path read(JsonReader in) throws IOException {
     var path = TypeAdapters.STRING.read(in);
-    return path == null ? null : Paths.get(path);
+    return path == null ? null : Path.of(path);
   }
 }
