@@ -16,7 +16,6 @@
 
 package de.dytanic.cloudnet.driver.network.netty.http;
 
-import com.google.common.base.Preconditions;
 import de.dytanic.cloudnet.common.collection.Pair;
 import de.dytanic.cloudnet.common.log.LogManager;
 import de.dytanic.cloudnet.common.log.Logger;
@@ -38,14 +37,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
-import lombok.EqualsAndHashCode;
-import lombok.ToString;
-import org.jetbrains.annotations.NotNull;
+import lombok.NonNull;
+import org.jetbrains.annotations.Nullable;
 
 public class NettyHttpServer extends NettySSLServer implements IHttpServer {
 
-  private static final Logger LOGGER = LogManager.getLogger(NettyHttpServer.class);
+  private static final Logger LOGGER = LogManager.logger(NettyHttpServer.class);
 
   protected final List<HttpHandlerEntry> registeredHandlers = new CopyOnWriteArrayList<>();
   protected final Map<Integer, Pair<HostAndPort, ChannelFuture>> channelFutures = new ConcurrentHashMap<>();
@@ -53,7 +50,7 @@ public class NettyHttpServer extends NettySSLServer implements IHttpServer {
   protected final EventLoopGroup bossGroup = NettyUtils.newEventLoopGroup();
   protected final EventLoopGroup workerGroup = NettyUtils.newEventLoopGroup();
 
-  public NettyHttpServer() throws Exception {
+  public NettyHttpServer() {
     this(null);
   }
 
@@ -68,7 +65,7 @@ public class NettyHttpServer extends NettySSLServer implements IHttpServer {
   }
 
   @Override
-  public boolean isSslEnabled() {
+  public boolean sslEnabled() {
     return this.sslContext != null;
   }
 
@@ -78,21 +75,17 @@ public class NettyHttpServer extends NettySSLServer implements IHttpServer {
   }
 
   @Override
-  public boolean addListener(@NotNull SocketAddress socketAddress) {
+  public boolean addListener(@NonNull SocketAddress socketAddress) {
     return this.addListener(HostAndPort.fromSocketAddress(socketAddress));
   }
 
   @Override
-  public boolean addListener(@NotNull HostAndPort hostAndPort) {
-    Preconditions.checkNotNull(hostAndPort);
-    Preconditions.checkNotNull(hostAndPort.getHost());
-
+  public boolean addListener(@NonNull HostAndPort hostAndPort) {
     try {
-
-      if (!this.channelFutures.containsKey(hostAndPort.getPort())) {
-        return this.channelFutures.putIfAbsent(hostAndPort.getPort(), new Pair<>(hostAndPort, new ServerBootstrap()
+      if (!this.channelFutures.containsKey(hostAndPort.port())) {
+        return this.channelFutures.putIfAbsent(hostAndPort.port(), new Pair<>(hostAndPort, new ServerBootstrap()
           .group(this.bossGroup, this.workerGroup)
-          .channelFactory(NettyUtils.getServerChannelFactory())
+          .channelFactory(NettyUtils.serverChannelFactory())
           .childHandler(new NettyHttpServerInitializer(this, hostAndPort))
 
           .childOption(ChannelOption.IP_TOS, 24)
@@ -100,7 +93,7 @@ public class NettyHttpServer extends NettySSLServer implements IHttpServer {
           .childOption(ChannelOption.TCP_NODELAY, true)
           .childOption(ChannelOption.ALLOCATOR, ByteBufAllocator.DEFAULT)
 
-          .bind(hostAndPort.getHost(), hostAndPort.getPort())
+          .bind(hostAndPort.host(), hostAndPort.port())
           .addListener(ChannelFutureListener.CLOSE_ON_FAILURE)
           .addListener(ChannelFutureListener.FIRE_EXCEPTION_ON_FAILURE)
 
@@ -116,23 +109,25 @@ public class NettyHttpServer extends NettySSLServer implements IHttpServer {
   }
 
   @Override
-  public IHttpServer registerHandler(String path, IHttpHandler... handlers) {
+  public @NonNull IHttpServer registerHandler(@NonNull String path, IHttpHandler... handlers) {
     return this.registerHandler(path, IHttpHandler.PRIORITY_NORMAL, handlers);
   }
 
   @Override
-  public IHttpServer registerHandler(String path, int priority, IHttpHandler... handlers) {
+  public @NonNull IHttpServer registerHandler(@NonNull String path, int priority, IHttpHandler... handlers) {
     return this.registerHandler(path, null, priority, handlers);
   }
 
   @Override
-  public IHttpServer registerHandler(String path, Integer port, int priority, IHttpHandler... handlers) {
-    Preconditions.checkNotNull(path);
-    Preconditions.checkNotNull(handlers);
-
+  public @NonNull IHttpServer registerHandler(
+    @NonNull String path, Integer port,
+    int priority,
+    IHttpHandler... handlers
+  ) {
     if (!path.startsWith("/")) {
       path = "/" + path;
     }
+
     if (path.endsWith("/") && !path.equals("/")) {
       path = path.substring(0, path.length() - 1);
     }
@@ -159,41 +154,32 @@ public class NettyHttpServer extends NettySSLServer implements IHttpServer {
   }
 
   @Override
-  public IHttpServer removeHandler(IHttpHandler handler) {
-    Preconditions.checkNotNull(handler);
-
+  public @NonNull IHttpServer removeHandler(@NonNull IHttpHandler handler) {
     this.registeredHandlers.removeIf(registeredHandler -> registeredHandler.httpHandler.equals(handler));
-
     return this;
   }
 
   @Override
-  public IHttpServer removeHandler(Class<? extends IHttpHandler> handler) {
-    Preconditions.checkNotNull(handler);
-
+  public @NonNull IHttpServer removeHandler(@NonNull Class<? extends IHttpHandler> handler) {
     this.registeredHandlers.removeIf(registeredHandler -> registeredHandler.httpHandler.getClass().equals(handler));
-
     return this;
   }
 
   @Override
-  public IHttpServer removeHandler(ClassLoader classLoader) {
-    Preconditions.checkNotNull(classLoader);
-
-    this.registeredHandlers
-      .removeIf(registeredHandler -> registeredHandler.httpHandler.getClass().getClassLoader().equals(classLoader));
-
+  public @NonNull IHttpServer removeHandler(@NonNull ClassLoader classLoader) {
+    this.registeredHandlers.removeIf(handler -> handler.httpHandler.getClass().getClassLoader().equals(classLoader));
     return this;
   }
 
   @Override
-  public Collection<IHttpHandler> getHttpHandlers() {
-    return this.registeredHandlers.stream().map(httpHandlerEntry -> httpHandlerEntry.httpHandler)
-      .collect(Collectors.toList());
+  public @NonNull Collection<IHttpHandler> httpHandlers() {
+    return this.registeredHandlers.stream()
+      .map(httpHandlerEntry -> httpHandlerEntry.httpHandler)
+      .toList();
   }
 
   @Override
-  public IHttpServer clearHandlers() {
+  public @NonNull IHttpServer clearHandlers() {
     this.registeredHandlers.clear();
     return this;
   }
@@ -201,7 +187,7 @@ public class NettyHttpServer extends NettySSLServer implements IHttpServer {
   @Override
   public void close() {
     for (var entry : this.channelFutures.values()) {
-      entry.getSecond().cancel(true);
+      entry.second().cancel(true);
     }
 
     this.bossGroup.shutdownGracefully();
@@ -209,27 +195,15 @@ public class NettyHttpServer extends NettySSLServer implements IHttpServer {
     this.clearHandlers();
   }
 
-  @ToString
-  @EqualsAndHashCode
-  public static class HttpHandlerEntry implements Comparable<HttpHandlerEntry> {
-
-    public final String path;
-    public final Integer port;
-    public final int priority;
-
-    public final IHttpHandler httpHandler;
-
-    public HttpHandlerEntry(String path, IHttpHandler httpHandler, Integer port, int priority) {
-      this.path = path;
-      this.httpHandler = httpHandler;
-      this.port = port;
-      this.priority = priority;
-    }
+  public record HttpHandlerEntry(
+    @NonNull String path,
+    @NonNull IHttpHandler httpHandler,
+    @Nullable Integer port,
+    int priority
+  ) implements Comparable<HttpHandlerEntry> {
 
     @Override
-    public int compareTo(@NotNull HttpHandlerEntry httpHandlerEntry) {
-      Preconditions.checkNotNull(httpHandlerEntry);
-
+    public int compareTo(@NonNull HttpHandlerEntry httpHandlerEntry) {
       return this.priority + httpHandlerEntry.priority;
     }
   }
