@@ -22,13 +22,13 @@ import de.dytanic.cloudnet.driver.CloudNetDriver;
 import java.util.Collection;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
-import org.jetbrains.annotations.NotNull;
+import lombok.NonNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 public interface IPermissible extends INameable, DocPropertyHolder, Comparable<IPermissible> {
 
-  @NotNull Collection<String> getGroupNames();
+  @NonNull Collection<String> groupNames();
 
   /**
    * Sets the name of this permissible.
@@ -38,17 +38,17 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    *
    * @param name the new name
    */
-  void setName(@NotNull String name);
+  void name(@NonNull String name);
 
   /**
    * Gets the potency of this permissible. If this permissible is an {@link PermissionGroup}, {@link
-   * IPermissionManagement#getHighestPermissionGroup(PermissionUser)} is sorted by the potency. If this permissible is
-   * an {@link PermissionUser}, in CloudNet it has no specific meaning, but of course you can use it for whatever you
+   * IPermissionManagement#highestPermissionGroup(PermissionUser)} is sorted by the potency. If this permissible is an
+   * {@link PermissionUser}, in CloudNet it has no specific meaning, but of course you can use it for whatever you
    * want.
    *
    * @return the potency of this permissible
    */
-  int getPotency();
+  int potency();
 
   /**
    * Sets the potency of this permissible.
@@ -58,7 +58,7 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    *
    * @param potency the new potency
    */
-  void setPotency(int potency);
+  void potency(int potency);
 
   /**
    * Adds a new permission to this permissible and updates it if a permission with that name already exists.
@@ -70,7 +70,7 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission has been added successfully or {@code false} if the given {@code permission}
    * was null
    */
-  boolean addPermission(@NotNull Permission permission);
+  boolean addPermission(@NonNull Permission permission);
 
   /**
    * Adds a new permission to this permissible and updates it if a permission with that name already exists. This
@@ -84,7 +84,7 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission has been added successfully or {@code false} if the given {@code permission}
    * was null
    */
-  boolean addPermission(@NotNull String group, @NotNull Permission permission);
+  boolean addPermission(@NonNull String group, @NonNull Permission permission);
 
   /**
    * Removes a permission out of this permissible.
@@ -96,7 +96,7 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission has been removed successfully or {@code false} if the given {@code
    * permission} doesn't exist
    */
-  boolean removePermission(@NotNull String permission);
+  boolean removePermission(@NonNull String permission);
 
   /**
    * Removes a permission for a specific group out of this permissible.
@@ -109,21 +109,21 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission has been removed successfully or {@code false} if the given {@code
    * permission} doesn't exist
    */
-  boolean removePermission(@NotNull String group, @NotNull String permission);
+  boolean removePermission(@NonNull String group, @NonNull String permission);
 
   /**
    * Gets all effective global permissions. Permissions which are only effective on specific groups are not included.
    *
    * @return a mutable list of all permissions
    */
-  @NotNull Collection<Permission> getPermissions();
+  @NonNull Collection<Permission> permissions();
 
   /**
    * Gets all effective permissions on a specific group. Global permissions are not included.
    *
    * @return a mutable map containing mutable lists of permissions
    */
-  @NotNull Map<String, Collection<Permission>> getGroupPermissions();
+  @NonNull Map<String, Collection<Permission>> groupPermissions();
 
   /**
    * Gets a permission of this permissible by its name.
@@ -132,9 +132,9 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return the {@link Permission} if the permission exists or {@code null} if the permission doesn't exist in this
    * permissible or the name is null
    */
-  default @Nullable Permission getPermission(@Nullable String name) {
-    return name == null ? null : this.getPermissions().stream()
-      .filter(permission -> permission.getName().equalsIgnoreCase(name))
+  default @Nullable Permission permission(@Nullable String name) {
+    return name == null ? null : this.permissions().stream()
+      .filter(permission -> permission.name().equalsIgnoreCase(name))
       .findFirst()
       .orElse(null);
   }
@@ -146,8 +146,8 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission exists or {@code false} if the permission doesn't exist in this permissible
    * or this name is null
    */
-  default boolean isPermissionSet(@NotNull String name) {
-    return this.getPermissions().stream().anyMatch(permission -> permission.getName().equalsIgnoreCase(name));
+  default boolean isPermissionSet(@NonNull String name) {
+    return this.permissions().stream().anyMatch(permission -> permission.name().equalsIgnoreCase(name));
   }
 
   /**
@@ -162,7 +162,7 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission has been added successfully or {@code false} if the given {@code permission}
    * was null
    */
-  default boolean addPermission(@NotNull String permission) {
+  default boolean addPermission(@NonNull String permission) {
     return this.addPermission(permission, 0);
   }
 
@@ -179,7 +179,7 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission has been added successfully or {@code false} if the given {@code permission}
    * was null
    */
-  default boolean addPermission(@NotNull String permission, boolean value) {
+  default boolean addPermission(@NonNull String permission, boolean value) {
     return this.addPermission(new Permission(permission, value ? 1 : -1));
   }
 
@@ -196,7 +196,7 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission has been added successfully or {@code false} if the given {@code permission}
    * was null
    */
-  default boolean addPermission(@NotNull String permission, int potency) {
+  default boolean addPermission(@NonNull String permission, int potency) {
     return this.addPermission(new Permission(permission, potency));
   }
 
@@ -213,7 +213,7 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission has been added successfully or {@code false} if the given {@code permission}
    * was null
    */
-  default boolean addPermission(@NotNull String group, @NotNull String permission) {
+  default boolean addPermission(@NonNull String group, @NonNull String permission) {
     return this.addPermission(group, permission, 0);
   }
 
@@ -231,7 +231,7 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return {@code true} if the permission has been added successfully or {@code false} if the given {@code permission}
    * was null
    */
-  default boolean addPermission(@NotNull String group, @NotNull String permission, int potency) {
+  default boolean addPermission(@NonNull String group, @NonNull String permission, int potency) {
     return this.addPermission(group, new Permission(permission, potency));
   }
 
@@ -253,11 +253,11 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * was null
    */
   default boolean addPermission(
-    @NotNull String group,
-    @NotNull String permission,
+    @NonNull String group,
+    @NonNull String permission,
     int potency,
     long time,
-    @NotNull TimeUnit unit
+    @NonNull TimeUnit unit
   ) {
     return this.addPermission(group, new Permission(
       permission,
@@ -266,12 +266,14 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
   }
 
   /**
-   * Gets a list of the names of all global permissions of this permissible. Modifications of this list are useless.
+   * Gets a list of the names of all global permissions of this permissible. Modifications to this list are not possible.
    *
    * @return a mutable list of all names of the permissions
    */
-  default Collection<String> getPermissionNames() {
-    return this.getPermissions().stream().map(Permission::getName).collect(Collectors.toList());
+  default @Unmodifiable Collection<String> permissionNames() {
+    return this.permissions().stream()
+      .map(Permission::name)
+      .toList();
   }
 
   /**
@@ -282,8 +284,8 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return the result of this check
    */
   default PermissionCheckResult hasPermission(
-    @NotNull Collection<Permission> permissions,
-    @NotNull Permission permission
+    @NonNull Collection<Permission> permissions,
+    @NonNull Permission permission
   ) {
     return PermissionCheckResult.fromPermission(this.findMatchingPermission(permissions, permission));
   }
@@ -297,10 +299,10 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @return the logic permission which has the highest potency.
    */
   default @Nullable Permission findMatchingPermission(
-    @NotNull Collection<Permission> permissions,
-    @NotNull Permission permission
+    @NonNull Collection<Permission> permissions,
+    @NonNull Permission permission
   ) {
-    return CloudNetDriver.getInstance().getPermissionManagement().findHighestPermission(permissions, permission);
+    return CloudNetDriver.instance().permissionManagement().findHighestPermission(permissions, permission);
   }
 
   /**
@@ -311,9 +313,9 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @param permission the permission to check for
    * @return the result of this check
    */
-  default PermissionCheckResult hasPermission(@NotNull String group, @NotNull Permission permission) {
-    return this.getGroupPermissions().containsKey(group)
-      ? this.hasPermission(this.getGroupPermissions().get(group), permission)
+  default PermissionCheckResult hasPermission(@NonNull String group, @NonNull Permission permission) {
+    return this.groupPermissions().containsKey(group)
+      ? this.hasPermission(this.groupPermissions().get(group), permission)
       : PermissionCheckResult.DENIED;
   }
 
@@ -323,8 +325,8 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @param permission the permission to check for
    * @return the result of this check
    */
-  default PermissionCheckResult hasPermission(@NotNull Permission permission) {
-    return this.hasPermission(this.getPermissions(), permission);
+  default PermissionCheckResult hasPermission(@NonNull Permission permission) {
+    return this.hasPermission(this.permissions(), permission);
   }
 
   /**
@@ -335,12 +337,12 @@ public interface IPermissible extends INameable, DocPropertyHolder, Comparable<I
    * @param permission the permission to check for
    * @return the result of this check
    */
-  default PermissionCheckResult hasPermission(@NotNull String permission) {
+  default PermissionCheckResult hasPermission(@NonNull String permission) {
     return this.hasPermission(new Permission(permission, 0));
   }
 
   @Override
-  default int compareTo(@NotNull IPermissible o) {
-    return this.getPotency() + o.getPotency();
+  default int compareTo(@NonNull IPermissible o) {
+    return this.potency() + o.potency();
   }
 }
