@@ -33,12 +33,11 @@ import java.util.Collections;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
+import lombok.NonNull;
 import net.md_5.bungee.api.CommandSender;
 import net.md_5.bungee.api.ProxyServer;
 import net.md_5.bungee.api.connection.PendingConnection;
 import net.md_5.bungee.api.connection.ProxiedPlayer;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 final class BungeeCordBridgeManagement extends PlatformBridgeManagement<ProxiedPlayer, NetworkPlayerProxyInfo> {
@@ -48,7 +47,7 @@ final class BungeeCordBridgeManagement extends PlatformBridgeManagement<ProxiedP
   private final PlayerExecutor globalDirectPlayerExecutor;
 
   public BungeeCordBridgeManagement() {
-    super(Wrapper.getInstance());
+    super(Wrapper.instance());
     // init fields
     this.globalDirectPlayerExecutor = new BungeeCordDirectPlayerExecutor(
       PlayerExecutor.GLOBAL_UNIQUE_ID,
@@ -59,7 +58,7 @@ final class BungeeCordBridgeManagement extends PlatformBridgeManagement<ProxiedP
     BridgeServiceHelper.MAX_PLAYERS.set(ProxyServer.getInstance().getConfig().getPlayerLimit());
     // init the default cache listeners
     this.cacheTester = CONNECTED_SERVICE_TESTER
-      .and(service -> ServiceEnvironmentType.JAVA_SERVER.get(service.getServiceId().getEnvironment().getProperties()));
+      .and(service -> ServiceEnvironmentType.JAVA_SERVER.get(service.serviceId().environment().properties()));
     // register each service matching the service cache tester
     this.cacheRegisterListener = BungeeCordServerHelper.SERVER_REGISTER_HANDLER;
     // unregister each service matching the service cache tester
@@ -67,18 +66,18 @@ final class BungeeCordBridgeManagement extends PlatformBridgeManagement<ProxiedP
   }
 
   @Override
-  public void registerServices(@NotNull IServicesRegistry registry) {
+  public void registerServices(@NonNull IServicesRegistry registry) {
     registry.registerService(IPlayerManager.class, "PlayerManager", this.playerManager);
     registry.registerService(PlatformBridgeManagement.class, "BungeeCordBridgeManagement", this);
   }
 
   @Override
-  public @NotNull ServicePlayer wrapPlayer(@NotNull ProxiedPlayer player) {
+  public @NonNull ServicePlayer wrapPlayer(@NonNull ProxiedPlayer player) {
     return new ServicePlayer(player.getUniqueId(), player.getName());
   }
 
   @Override
-  public @NotNull NetworkPlayerProxyInfo createPlayerInformation(@NotNull ProxiedPlayer player) {
+  public @NonNull NetworkPlayerProxyInfo createPlayerInformation(@NonNull ProxiedPlayer player) {
     return new NetworkPlayerProxyInfo(
       player.getUniqueId(),
       player.getName(),
@@ -91,12 +90,12 @@ final class BungeeCordBridgeManagement extends PlatformBridgeManagement<ProxiedP
   }
 
   @Override
-  public @NotNull BiFunction<ProxiedPlayer, String, Boolean> getPermissionFunction() {
+  public @NonNull BiFunction<ProxiedPlayer, String, Boolean> permissionFunction() {
     return PERM_FUNCTION;
   }
 
   @Override
-  public boolean isOnAnyFallbackInstance(@NotNull ProxiedPlayer player) {
+  public boolean isOnAnyFallbackInstance(@NonNull ProxiedPlayer player) {
     return this.isOnAnyFallbackInstance(
       player.getServer() == null ? null : player.getServer().getInfo().getName(),
       this.getVirtualHostString(player.getPendingConnection()),
@@ -104,16 +103,16 @@ final class BungeeCordBridgeManagement extends PlatformBridgeManagement<ProxiedP
   }
 
   @Override
-  public @NotNull Optional<ServiceInfoSnapshot> getFallback(@NotNull ProxiedPlayer player) {
-    return this.getFallback(player, player.getServer() == null ? null : player.getServer().getInfo().getName());
+  public @NonNull Optional<ServiceInfoSnapshot> fallback(@NonNull ProxiedPlayer player) {
+    return this.fallback(player, player.getServer() == null ? null : player.getServer().getInfo().getName());
   }
 
   @Override
-  public @NotNull Optional<ServiceInfoSnapshot> getFallback(
-    @NotNull ProxiedPlayer player,
+  public @NonNull Optional<ServiceInfoSnapshot> fallback(
+    @NonNull ProxiedPlayer player,
     @Nullable String currServer
   ) {
-    return this.getFallback(
+    return this.fallback(
       player.getUniqueId(),
       currServer,
       this.getVirtualHostString(player.getPendingConnection()),
@@ -121,17 +120,17 @@ final class BungeeCordBridgeManagement extends PlatformBridgeManagement<ProxiedP
   }
 
   @Override
-  public void handleFallbackConnectionSuccess(@NotNull ProxiedPlayer player) {
+  public void handleFallbackConnectionSuccess(@NonNull ProxiedPlayer player) {
     this.handleFallbackConnectionSuccess(player.getUniqueId());
   }
 
   @Override
-  public void removeFallbackProfile(@NotNull ProxiedPlayer player) {
+  public void removeFallbackProfile(@NonNull ProxiedPlayer player) {
     this.removeFallbackProfile(player.getUniqueId());
   }
 
   @Override
-  public @NotNull PlayerExecutor getDirectPlayerExecutor(@NotNull UUID uniqueId) {
+  public @NonNull PlayerExecutor directPlayerExecutor(@NonNull UUID uniqueId) {
     return uniqueId.equals(PlayerExecutor.GLOBAL_UNIQUE_ID)
       ? this.globalDirectPlayerExecutor
       : new BungeeCordDirectPlayerExecutor(
@@ -141,18 +140,18 @@ final class BungeeCordBridgeManagement extends PlatformBridgeManagement<ProxiedP
   }
 
   @Override
-  public void appendServiceInformation(@NotNull ServiceInfoSnapshot snapshot) {
+  public void appendServiceInformation(@NonNull ServiceInfoSnapshot snapshot) {
     super.appendServiceInformation(snapshot);
     // append the velocity specific information
-    snapshot.getProperties().append("Online-Count", ProxyServer.getInstance().getPlayers().size());
-    snapshot.getProperties().append("Version", ProxyServer.getInstance().getVersion());
+    snapshot.properties().append("Online-Count", ProxyServer.getInstance().getPlayers().size());
+    snapshot.properties().append("Version", ProxyServer.getInstance().getVersion());
     // players
-    snapshot.getProperties().append("Players", ProxyServer.getInstance().getPlayers().stream()
+    snapshot.properties().append("Players", ProxyServer.getInstance().getPlayers().stream()
       .map(this::createPlayerInformation)
-      .collect(Collectors.toList()));
+      .toList());
   }
 
-  private @Nullable String getVirtualHostString(@NotNull PendingConnection connection) {
+  private @Nullable String getVirtualHostString(@NonNull PendingConnection connection) {
     return connection.getVirtualHost() == null ? null : connection.getVirtualHost().getHostString();
   }
 }
