@@ -39,8 +39,7 @@ import java.util.Collections;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
-import org.jetbrains.annotations.NotNull;
+import lombok.NonNull;
 import org.jetbrains.annotations.Nullable;
 
 final class VelocityBridgeManagement extends PlatformBridgeManagement<Player, NetworkPlayerProxyInfo> {
@@ -50,8 +49,8 @@ final class VelocityBridgeManagement extends PlatformBridgeManagement<Player, Ne
   private final ProxyServer proxyServer;
   private final PlayerExecutor globalDirectPlayerExecutor;
 
-  public VelocityBridgeManagement(@NotNull ProxyServer proxyServer) {
-    super(Wrapper.getInstance());
+  public VelocityBridgeManagement(@NonNull ProxyServer proxyServer) {
+    super(Wrapper.instance());
     // init fields
     this.proxyServer = proxyServer;
     this.globalDirectPlayerExecutor = new VelocityDirectPlayerExecutor(
@@ -64,30 +63,30 @@ final class VelocityBridgeManagement extends PlatformBridgeManagement<Player, Ne
     BridgeServiceHelper.MAX_PLAYERS.set(proxyServer.getConfiguration().getShowMaxPlayers());
     // init the default cache listeners
     this.cacheTester = CONNECTED_SERVICE_TESTER
-      .and(service -> ServiceEnvironmentType.JAVA_SERVER.get(service.getServiceId().getEnvironment().getProperties()));
+      .and(service -> ServiceEnvironmentType.JAVA_SERVER.get(service.serviceId().environment().properties()));
     // register each service matching the service cache tester
     this.cacheRegisterListener = service -> proxyServer.registerServer(new ServerInfo(
-      service.getName(),
-      new InetSocketAddress(service.getConnectAddress().getHost(), service.getConnectAddress().getPort())));
+      service.name(),
+      new InetSocketAddress(service.connectAddress().host(), service.connectAddress().port())));
     // unregister each service matching the service cache tester
-    this.cacheUnregisterListener = service -> proxyServer.getServer(service.getName())
+    this.cacheUnregisterListener = service -> proxyServer.getServer(service.name())
       .map(RegisteredServer::getServerInfo)
       .ifPresent(proxyServer::unregisterServer);
   }
 
   @Override
-  public void registerServices(@NotNull IServicesRegistry registry) {
+  public void registerServices(@NonNull IServicesRegistry registry) {
     registry.registerService(IPlayerManager.class, "PlayerManager", this.playerManager);
     registry.registerService(PlatformBridgeManagement.class, "VelocityBridgeManagement", this);
   }
 
   @Override
-  public @NotNull ServicePlayer wrapPlayer(@NotNull Player player) {
+  public @NonNull ServicePlayer wrapPlayer(@NonNull Player player) {
     return new ServicePlayer(player.getUniqueId(), player.getUsername());
   }
 
   @Override
-  public @NotNull NetworkPlayerProxyInfo createPlayerInformation(@NotNull Player player) {
+  public @NonNull NetworkPlayerProxyInfo createPlayerInformation(@NonNull Player player) {
     return new NetworkPlayerProxyInfo(
       player.getUniqueId(),
       player.getUsername(),
@@ -100,12 +99,12 @@ final class VelocityBridgeManagement extends PlatformBridgeManagement<Player, Ne
   }
 
   @Override
-  public @NotNull BiFunction<Player, String, Boolean> getPermissionFunction() {
+  public @NonNull BiFunction<Player, String, Boolean> permissionFunction() {
     return PERM_FUNCTION;
   }
 
   @Override
-  public boolean isOnAnyFallbackInstance(@NotNull Player player) {
+  public boolean isOnAnyFallbackInstance(@NonNull Player player) {
     return this.isOnAnyFallbackInstance(
       player.getCurrentServer().map(connection -> connection.getServerInfo().getName()).orElse(null),
       player.getVirtualHost().map(InetSocketAddress::getHostString).orElse(null),
@@ -113,15 +112,15 @@ final class VelocityBridgeManagement extends PlatformBridgeManagement<Player, Ne
   }
 
   @Override
-  public @NotNull Optional<ServiceInfoSnapshot> getFallback(@NotNull Player player) {
-    return this.getFallback(
+  public @NonNull Optional<ServiceInfoSnapshot> fallback(@NonNull Player player) {
+    return this.fallback(
       player,
       player.getCurrentServer().map(connection -> connection.getServerInfo().getName()).orElse(null));
   }
 
   @Override
-  public @NotNull Optional<ServiceInfoSnapshot> getFallback(@NotNull Player player, @Nullable String currServer) {
-    return this.getFallback(
+  public @NonNull Optional<ServiceInfoSnapshot> fallback(@NonNull Player player, @Nullable String currServer) {
+    return this.fallback(
       player.getUniqueId(),
       currServer,
       player.getVirtualHost().map(InetSocketAddress::getHostString).orElse(null),
@@ -129,17 +128,17 @@ final class VelocityBridgeManagement extends PlatformBridgeManagement<Player, Ne
   }
 
   @Override
-  public void handleFallbackConnectionSuccess(@NotNull Player player) {
+  public void handleFallbackConnectionSuccess(@NonNull Player player) {
     this.handleFallbackConnectionSuccess(player.getUniqueId());
   }
 
   @Override
-  public void removeFallbackProfile(@NotNull Player player) {
+  public void removeFallbackProfile(@NonNull Player player) {
     this.removeFallbackProfile(player.getUniqueId());
   }
 
   @Override
-  public @NotNull PlayerExecutor getDirectPlayerExecutor(@NotNull UUID uniqueId) {
+  public @NonNull PlayerExecutor directPlayerExecutor(@NonNull UUID uniqueId) {
     return uniqueId.equals(PlayerExecutor.GLOBAL_UNIQUE_ID)
       ? this.globalDirectPlayerExecutor
       : new VelocityDirectPlayerExecutor(
@@ -150,14 +149,14 @@ final class VelocityBridgeManagement extends PlatformBridgeManagement<Player, Ne
   }
 
   @Override
-  public void appendServiceInformation(@NotNull ServiceInfoSnapshot snapshot) {
+  public void appendServiceInformation(@NonNull ServiceInfoSnapshot snapshot) {
     super.appendServiceInformation(snapshot);
     // append the velocity specific information
-    snapshot.getProperties().append("Online-Count", this.proxyServer.getPlayerCount());
-    snapshot.getProperties().append("Version", this.proxyServer.getVersion().getVersion());
+    snapshot.properties().append("Online-Count", this.proxyServer.getPlayerCount());
+    snapshot.properties().append("Version", this.proxyServer.getVersion().getVersion());
     // players
-    snapshot.getProperties().append("Players", this.proxyServer.getAllPlayers().stream()
+    snapshot.properties().append("Players", this.proxyServer.getAllPlayers().stream()
       .map(this::createPlayerInformation)
-      .collect(Collectors.toList()));
+      .toList());
   }
 }
