@@ -37,8 +37,7 @@ import java.util.Collections;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
-import org.jetbrains.annotations.NotNull;
+import lombok.NonNull;
 import org.jetbrains.annotations.Nullable;
 
 final class WaterDogPEBridgeManagement extends PlatformBridgeManagement<ProxiedPlayer, NetworkPlayerProxyInfo> {
@@ -48,7 +47,7 @@ final class WaterDogPEBridgeManagement extends PlatformBridgeManagement<ProxiedP
   private final PlayerExecutor globalDirectPlayerExecutor;
 
   public WaterDogPEBridgeManagement() {
-    super(Wrapper.getInstance());
+    super(Wrapper.instance());
     // init fields
     this.globalDirectPlayerExecutor = new WaterDogPEDirectPlayerExecutor(
       PlayerExecutor.GLOBAL_UNIQUE_ID,
@@ -59,31 +58,31 @@ final class WaterDogPEBridgeManagement extends PlatformBridgeManagement<ProxiedP
     BridgeServiceHelper.MAX_PLAYERS.set(ProxyServer.getInstance().getConfiguration().getMaxPlayerCount());
     // init the default cache listeners
     this.cacheTester = CONNECTED_SERVICE_TESTER
-      .and(service -> ServiceEnvironmentType.PE_SERVER.get(service.getServiceId().getEnvironment().getProperties()));
+      .and(service -> ServiceEnvironmentType.PE_SERVER.get(service.serviceId().environment().properties()));
     // register each service matching the service cache tester
     this.cacheRegisterListener = service -> ProxyServer.getInstance().getServerInfoMap().put(
-      service.getName(),
+      service.name(),
       new BedrockServerInfo(
-        service.getName(),
-        new InetSocketAddress(service.getConnectAddress().getHost(), service.getConnectAddress().getPort()),
-        new InetSocketAddress(service.getConnectAddress().getHost(), service.getConnectAddress().getPort())));
+        service.name(),
+        new InetSocketAddress(service.connectAddress().host(), service.connectAddress().port()),
+        new InetSocketAddress(service.connectAddress().host(), service.connectAddress().port())));
     // unregister each service matching the service cache tester
-    this.cacheUnregisterListener = service -> ProxyServer.getInstance().getServerInfoMap().remove(service.getName());
+    this.cacheUnregisterListener = service -> ProxyServer.getInstance().getServerInfoMap().remove(service.name());
   }
 
   @Override
-  public void registerServices(@NotNull IServicesRegistry registry) {
+  public void registerServices(@NonNull IServicesRegistry registry) {
     registry.registerService(IPlayerManager.class, "PlayerManager", this.playerManager);
     registry.registerService(PlatformBridgeManagement.class, "WaterDogPEBridgeManagement", this);
   }
 
   @Override
-  public @NotNull ServicePlayer wrapPlayer(@NotNull ProxiedPlayer player) {
+  public @NonNull ServicePlayer wrapPlayer(@NonNull ProxiedPlayer player) {
     return new ServicePlayer(player.getUniqueId(), player.getName());
   }
 
   @Override
-  public @NotNull NetworkPlayerProxyInfo createPlayerInformation(@NotNull ProxiedPlayer player) {
+  public @NonNull NetworkPlayerProxyInfo createPlayerInformation(@NonNull ProxiedPlayer player) {
     return new NetworkPlayerProxyInfo(
       player.getUniqueId(),
       player.getName(),
@@ -96,12 +95,12 @@ final class WaterDogPEBridgeManagement extends PlatformBridgeManagement<ProxiedP
   }
 
   @Override
-  public @NotNull BiFunction<ProxiedPlayer, String, Boolean> getPermissionFunction() {
+  public @NonNull BiFunction<ProxiedPlayer, String, Boolean> permissionFunction() {
     return PERM_FUNCTION;
   }
 
   @Override
-  public boolean isOnAnyFallbackInstance(@NotNull ProxiedPlayer player) {
+  public boolean isOnAnyFallbackInstance(@NonNull ProxiedPlayer player) {
     return this.isOnAnyFallbackInstance(
       player.getServerInfo() == null ? null : player.getServerInfo().getServerName(),
       player.getLoginData().getJoinHostname(),
@@ -109,16 +108,16 @@ final class WaterDogPEBridgeManagement extends PlatformBridgeManagement<ProxiedP
   }
 
   @Override
-  public @NotNull Optional<ServiceInfoSnapshot> getFallback(@NotNull ProxiedPlayer player) {
-    return this.getFallback(player, player.getServerInfo() == null ? null : player.getServerInfo().getServerName());
+  public @NonNull Optional<ServiceInfoSnapshot> fallback(@NonNull ProxiedPlayer player) {
+    return this.fallback(player, player.getServerInfo() == null ? null : player.getServerInfo().getServerName());
   }
 
   @Override
-  public @NotNull Optional<ServiceInfoSnapshot> getFallback(
-    @NotNull ProxiedPlayer player,
+  public @NonNull Optional<ServiceInfoSnapshot> fallback(
+    @NonNull ProxiedPlayer player,
     @Nullable String currServer
   ) {
-    return this.getFallback(
+    return this.fallback(
       player.getUniqueId(),
       currServer,
       player.getLoginData().getJoinHostname(),
@@ -126,17 +125,17 @@ final class WaterDogPEBridgeManagement extends PlatformBridgeManagement<ProxiedP
   }
 
   @Override
-  public void handleFallbackConnectionSuccess(@NotNull ProxiedPlayer player) {
+  public void handleFallbackConnectionSuccess(@NonNull ProxiedPlayer player) {
     this.handleFallbackConnectionSuccess(player.getUniqueId());
   }
 
   @Override
-  public void removeFallbackProfile(@NotNull ProxiedPlayer player) {
+  public void removeFallbackProfile(@NonNull ProxiedPlayer player) {
     this.removeFallbackProfile(player.getUniqueId());
   }
 
   @Override
-  public @NotNull PlayerExecutor getDirectPlayerExecutor(@NotNull UUID uniqueId) {
+  public @NonNull PlayerExecutor directPlayerExecutor(@NonNull UUID uniqueId) {
     return uniqueId.equals(PlayerExecutor.GLOBAL_UNIQUE_ID)
       ? this.globalDirectPlayerExecutor
       : new WaterDogPEDirectPlayerExecutor(
@@ -146,14 +145,14 @@ final class WaterDogPEBridgeManagement extends PlatformBridgeManagement<ProxiedP
   }
 
   @Override
-  public void appendServiceInformation(@NotNull ServiceInfoSnapshot snapshot) {
+  public void appendServiceInformation(@NonNull ServiceInfoSnapshot snapshot) {
     super.appendServiceInformation(snapshot);
     // append the velocity specific information
-    snapshot.getProperties().append("Online-Count", ProxyServer.getInstance().getPlayers().size());
-    snapshot.getProperties().append("Version", WaterdogPE.version().baseVersion());
+    snapshot.properties().append("Online-Count", ProxyServer.getInstance().getPlayers().size());
+    snapshot.properties().append("Version", WaterdogPE.version().baseVersion());
     // players
-    snapshot.getProperties().append("Players", ProxyServer.getInstance().getPlayers().values().stream()
+    snapshot.properties().append("Players", ProxyServer.getInstance().getPlayers().values().stream()
       .map(this::createPlayerInformation)
-      .collect(Collectors.toList()));
+      .toList());
   }
 }
