@@ -34,7 +34,7 @@ import java.util.HashSet;
 import java.util.Map.Entry;
 import java.util.Set;
 import java.util.stream.Collectors;
-import org.jetbrains.annotations.NotNull;
+import lombok.NonNull;
 
 public final class NodeNPCManagement extends AbstractNPCManagement {
 
@@ -42,10 +42,10 @@ public final class NodeNPCManagement extends AbstractNPCManagement {
   private final Path configurationPath;
 
   public NodeNPCManagement(
-    @NotNull NPCConfiguration npcConfiguration,
-    @NotNull Database database,
-    @NotNull Path configPath,
-    @NotNull IEventManager eventManager
+    @NonNull NPCConfiguration npcConfiguration,
+    @NonNull Database database,
+    @NonNull Path configPath,
+    @NonNull IEventManager eventManager
   ) {
     super(npcConfiguration);
     this.database = database;
@@ -55,7 +55,7 @@ public final class NodeNPCManagement extends AbstractNPCManagement {
     this.database.documentsAsync().onComplete(jsonDocuments -> {
       for (var document : jsonDocuments) {
         var npc = document.toInstanceOf(NPC.class);
-        this.npcs.put(npc.getLocation(), npc);
+        this.npcs.put(npc.location(), npc);
       }
     });
 
@@ -64,7 +64,7 @@ public final class NodeNPCManagement extends AbstractNPCManagement {
     eventManager.registerListener(new NodeChannelMessageListener(this));
   }
 
-  static @NotNull String getDocumentKey(@NotNull WorldPosition position) {
+  static @NonNull String documentKey(@NonNull WorldPosition position) {
     return position.world()
       + '.' + position.group()
       + '.' + position.x()
@@ -75,9 +75,9 @@ public final class NodeNPCManagement extends AbstractNPCManagement {
   }
 
   @Override
-  public void createNPC(@NotNull NPC npc) {
-    this.database.insert(getDocumentKey(npc.getLocation()), JsonDocument.newDocument(npc));
-    this.npcs.put(npc.getLocation(), npc);
+  public void createNPC(@NonNull NPC npc) {
+    this.database.insert(documentKey(npc.location()), JsonDocument.newDocument(npc));
+    this.npcs.put(npc.location(), npc);
 
     this.channelMessage(NPC_CREATED)
       .targetAll()
@@ -86,9 +86,9 @@ public final class NodeNPCManagement extends AbstractNPCManagement {
   }
 
   @Override
-  public void deleteNPC(@NotNull WorldPosition position) {
+  public void deleteNPC(@NonNull WorldPosition position) {
     this.npcs.remove(position);
-    this.database.delete(getDocumentKey(position));
+    this.database.delete(documentKey(position));
 
     this.channelMessage(NPC_DELETED)
       .targetAll()
@@ -97,14 +97,14 @@ public final class NodeNPCManagement extends AbstractNPCManagement {
   }
 
   @Override
-  public int deleteAllNPCs(@NotNull String group) {
+  public int deleteAllNPCs(@NonNull String group) {
     Collection<WorldPosition> positions = this.npcs.entrySet().stream()
-      .filter(entry -> entry.getValue().getTargetGroup().equals(group))
+      .filter(entry -> entry.getValue().targetGroup().equals(group))
       .map(Entry::getKey)
-      .collect(Collectors.toList());
+      .toList();
     positions.forEach(position -> {
       this.npcs.remove(position);
-      this.database.delete(getDocumentKey(position));
+      this.database.delete(documentKey(position));
     });
 
     this.channelMessage(NPC_BULK_DELETE)
@@ -119,7 +119,7 @@ public final class NodeNPCManagement extends AbstractNPCManagement {
     Set<WorldPosition> positions = new HashSet<>(this.npcs.keySet());
     for (var position : positions) {
       this.npcs.remove(position);
-      this.database.delete(getDocumentKey(position));
+      this.database.delete(documentKey(position));
     }
 
     this.channelMessage(NPC_BULK_DELETE)
@@ -130,16 +130,16 @@ public final class NodeNPCManagement extends AbstractNPCManagement {
   }
 
   @Override
-  public @NotNull Collection<NPC> getNPCs(@NotNull String[] groups) {
+  public @NonNull Collection<NPC> npcs(@NonNull String[] groups) {
     Arrays.sort(groups);
     // filter all npcs
     return this.npcs.values().stream()
-      .filter(npc -> Arrays.binarySearch(groups, npc.getLocation().group()) >= 0)
+      .filter(npc -> Arrays.binarySearch(groups, npc.location().group()) >= 0)
       .collect(Collectors.toList());
   }
 
   @Override
-  public void setNPCConfiguration(@NotNull NPCConfiguration configuration) {
+  public void npcConfiguration(@NonNull NPCConfiguration configuration) {
     this.handleInternalNPCConfigUpdate(configuration);
     this.channelMessage(NPC_CONFIGURATION_UPDATE)
       .targetAll()
@@ -148,7 +148,7 @@ public final class NodeNPCManagement extends AbstractNPCManagement {
   }
 
   @Override
-  public void handleInternalNPCConfigUpdate(@NotNull NPCConfiguration configuration) {
+  public void handleInternalNPCConfigUpdate(@NonNull NPCConfiguration configuration) {
     super.handleInternalNPCConfigUpdate(configuration);
     JsonDocument.newDocument(configuration).write(this.configurationPath);
   }
