@@ -16,7 +16,6 @@
 
 package eu.cloudnetservice.ext.sftp;
 
-import com.google.common.io.ByteStreams;
 import de.dytanic.cloudnet.common.io.FileUtils;
 import de.dytanic.cloudnet.driver.network.HostAndPort;
 import de.dytanic.cloudnet.driver.service.ServiceTemplate;
@@ -27,7 +26,6 @@ import java.net.ServerSocket;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import org.apache.sshd.common.file.virtualfs.VirtualFileSystemFactory;
@@ -46,7 +44,7 @@ import org.junit.jupiter.api.TestMethodOrder;
 public final class SFTPTemplateStorageTest {
 
   private static final int PORT;
-  private static final Path BASE_PATH = Paths.get("").resolve("build").toAbsolutePath();
+  private static final Path BASE_PATH = Path.of("").resolve("build").toAbsolutePath();
   private static final ServiceTemplate TEMPLATE = ServiceTemplate.builder()
     .prefix("global")
     .name("proxy")
@@ -154,7 +152,7 @@ public final class SFTPTemplateStorageTest {
   void testNewInputStream() throws IOException {
     try (var stream = storage.newInputStream(TEMPLATE, "test.txt")) {
       Assertions.assertNotNull(stream);
-      Assertions.assertArrayEquals(ByteStreams.toByteArray(stream), "HelloWorld".getBytes(StandardCharsets.UTF_8));
+      Assertions.assertArrayEquals(stream.readAllBytes(), "HelloWorld".getBytes(StandardCharsets.UTF_8));
     }
   }
 
@@ -176,11 +174,11 @@ public final class SFTPTemplateStorageTest {
   @Test
   @Order(70)
   void testFileGetFileInfo() {
-    var info = storage.getFileInfo(TEMPLATE, "hello.txt");
+    var info = storage.fileInfo(TEMPLATE, "hello.txt");
     Assertions.assertNotNull(info);
-    Assertions.assertEquals(0, info.getSize());
-    Assertions.assertEquals("hello.txt", info.getPath());
-    Assertions.assertEquals("hello.txt", info.getName());
+    Assertions.assertEquals(0, info.size());
+    Assertions.assertEquals("hello.txt", info.path());
+    Assertions.assertEquals("hello.txt", info.name());
   }
 
   @Test
@@ -213,9 +211,9 @@ public final class SFTPTemplateStorageTest {
     var files = storage.listFiles(TEMPLATE, "hello", false);
     Assertions.assertNotNull(files);
     Assertions.assertEquals(1, files.length);
-    Assertions.assertEquals(0, files[0].getSize());
-    Assertions.assertEquals("test.txt", files[0].getName());
-    Assertions.assertEquals("/home/CloudNet/global/proxy/hello/test.txt", files[0].getPath());
+    Assertions.assertEquals(0, files[0].size());
+    Assertions.assertEquals("test.txt", files[0].name());
+    Assertions.assertEquals("/home/CloudNet/global/proxy/hello/test.txt", files[0].path());
   }
 
   @Test
@@ -226,15 +224,15 @@ public final class SFTPTemplateStorageTest {
     Assertions.assertEquals(3, files.length);
 
     // there must be one directory
-    var dir = Arrays.stream(files).filter(FileInfo::isDirectory).findFirst().orElse(null);
+    var dir = Arrays.stream(files).filter(FileInfo::directory).findFirst().orElse(null);
     Assertions.assertNotNull(dir);
-    Assertions.assertEquals("hello", dir.getName());
+    Assertions.assertEquals("hello", dir.name());
   }
 
   @Test
   @Order(130)
   void testTemplateListing() {
-    var templates = storage.getTemplates();
+    var templates = storage.templates();
     Assertions.assertEquals(1, templates.size());
     Assertions.assertEquals(TEMPLATE, templates.iterator().next());
   }
