@@ -74,7 +74,6 @@ import de.dytanic.cloudnet.template.LocalTemplateStorage;
 import de.dytanic.cloudnet.template.install.ServiceVersionProvider;
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -86,7 +85,7 @@ import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
-import org.jetbrains.annotations.NotNull;
+import lombok.NonNull;
 import org.jetbrains.annotations.Nullable;
 
 /**
@@ -94,8 +93,8 @@ import org.jetbrains.annotations.Nullable;
  */
 public class CloudNet extends CloudNetDriver {
 
-  private static final Logger LOGGER = LogManager.getLogger(CloudNet.class);
-  private static final Path LAUNCHER_DIR = Paths.get(System.getProperty("cloudnet.launcher.dir", "launcher"));
+  private static final Logger LOGGER = LogManager.logger(CloudNet.class);
+  private static final Path LAUNCHER_DIR = Path.of(System.getProperty("cloudnet.launcher.dir", "launcher"));
 
   private final IConsole console;
   private final CommandProvider commandProvider;
@@ -116,10 +115,10 @@ public class CloudNet extends CloudNetDriver {
   private volatile IConfiguration configuration;
   private volatile AbstractDatabaseProvider databaseProvider;
 
-  protected CloudNet(@NotNull String[] args, @NotNull IConsole console, @NotNull Logger rootLogger) {
+  protected CloudNet(@NonNull String[] args, @NonNull IConsole console, @NonNull Logger rootLogger) {
     super(Arrays.asList(args));
 
-    setInstance(this);
+    instance(this);
 
     // add the log handler here to capture all log lines of the startup
     this.logHandler.setFormatter(console.hasColorSupport()
@@ -147,21 +146,21 @@ public class CloudNet extends CloudNetDriver {
     this.groupConfigurationProvider = new NodeGroupConfigurationProvider(this);
 
     // permission management init
-    this.setPermissionManagement(new DefaultDatabasePermissionManagement(this));
-    this.getPermissionManagement().setPermissionManagementHandler(
+    this.permissionManagement(new DefaultDatabasePermissionManagement(this));
+    this.permissionManagement().permissionManagementHandler(
       new DefaultPermissionManagementHandler(this.eventManager));
 
-    this.moduleProvider.setModuleDependencyLoader(
+    this.moduleProvider.moduleDependencyLoader(
       new DefaultPersistableModuleDependencyLoader(LAUNCHER_DIR.resolve("libs")));
-    this.moduleProvider.setModuleProviderHandler(new NodeModuleProviderHandler(this));
+    this.moduleProvider.moduleProviderHandler(new NodeModuleProviderHandler(this));
 
     this.networkClient = new NettyNetworkClient(
       DefaultNetworkClientChannelHandler::new,
-      this.configuration.getClientSslConfig());
+      this.configuration.clientSSLConfig());
     this.networkServer = new NettyNetworkServer(
       DefaultNetworkServerChannelHandler::new,
-      this.configuration.getServerSslConfig());
-    this.httpServer = new NettyHttpServer(this.configuration.getWebSslConfig());
+      this.configuration.serverSSLConfig());
+    this.httpServer = new NettyHttpServer(this.configuration.webSSLConfig());
 
     // register all rpc handlers associated with methods of this class
     this.rpcProviderFactory.newHandler(Database.class, null).registerToDefaultRegistry();
@@ -171,8 +170,8 @@ public class CloudNet extends CloudNetDriver {
     this.driverEnvironment = DriverEnvironment.CLOUDNET;
   }
 
-  public static @NotNull CloudNet getInstance() {
-    return (CloudNet) CloudNetDriver.getInstance();
+  public static @NonNull CloudNet instance() {
+    return (CloudNet) CloudNetDriver.instance();
   }
 
   @Override
@@ -185,32 +184,32 @@ public class CloudNet extends CloudNetDriver {
     this.servicesRegistry.registerService(
       TemplateStorage.class,
       "local",
-      new LocalTemplateStorage(Paths.get(System.getProperty("cloudnet.storage.local", "local/templates"))));
+      new LocalTemplateStorage(Path.of(System.getProperty("cloudnet.storage.local", "local/templates"))));
     // init the default database providers
     this.servicesRegistry.registerService(
       AbstractDatabaseProvider.class,
       "h2",
       new H2DatabaseProvider(
         System.getProperty("cloudnet.database.h2.path", "local/database/h2"),
-        !this.configuration.getClusterConfig().getNodes().isEmpty()));
+        !this.configuration.clusterConfig().nodes().isEmpty()));
     this.servicesRegistry.registerService(
       AbstractDatabaseProvider.class,
       "xodus",
       new XodusDatabaseProvider(
         new File(System.getProperty("cloudnet.database.xodus.path", "local/database/xodus")),
-        !this.configuration.getClusterConfig().getNodes().isEmpty()));
+        !this.configuration.clusterConfig().nodes().isEmpty()));
 
     // initialize the default database provider
-    this.setDatabaseProvider(this.servicesRegistry.getService(
+    this.databaseProvider(this.servicesRegistry.service(
       AbstractDatabaseProvider.class,
-      this.configuration.getProperties().getString("database_provider", "xodus")));
+      this.configuration.properties().getString("database_provider", "xodus")));
 
     // load the modules before proceeding for example to allow the database provider init
     this.moduleProvider.loadAll();
 
     // check if there is a database provider or initialize the default one
     if (this.databaseProvider == null || !this.databaseProvider.init()) {
-      this.setDatabaseProvider(this.servicesRegistry.getService(AbstractDatabaseProvider.class, "xodus"));
+      this.databaseProvider(this.servicesRegistry.service(AbstractDatabaseProvider.class, "xodus"));
       if (this.databaseProvider == null || !this.databaseProvider.init()) {
         // unable to start without a database
         throw new IllegalStateException("No database provider selected for startup - Unable to proceed");
@@ -224,22 +223,22 @@ public class CloudNet extends CloudNetDriver {
     this.installation.executeFirstStartSetup(this.console);
 
     // init the local node server
-    this.nodeServerProvider.setClusterServers(this.configuration.getClusterConfig());
-    this.nodeServerProvider.getSelfNode().setNodeInfo(this.configuration.getIdentity());
-    this.nodeServerProvider.getSelfNode().publishNodeInfoSnapshotUpdate();
+    this.nodeServerProvider.clusterServers(this.configuration.clusterConfig());
+    this.nodeServerProvider.selfNode().nodeInfo(this.configuration.identity());
+    this.nodeServerProvider.selfNode().publishNodeInfoSnapshotUpdate();
 
     // network server init
-    for (var listener : this.configuration.getIdentity().getListeners()) {
+    for (var listener : this.configuration.identity().listeners()) {
       this.networkServer.addListener(listener);
     }
     // http server init
-    for (var httpListener : this.configuration.getHttpListeners()) {
+    for (var httpListener : this.configuration.httpListeners()) {
       this.httpServer.addListener(httpListener);
     }
     // network client init
     Set<CompletableFuture<Void>> futures = new HashSet<>(); // all futures of connections
-    for (var node : this.nodeServerProvider.getNodeServers()) {
-      var listeners = node.getNodeInfo().getListeners();
+    for (var node : this.nodeServerProvider.nodeServers()) {
+      var listeners = node.nodeInfo().listeners();
       // check if there are any listeners
       if (listeners.length > 0) {
         // get a random listener of the node
@@ -247,7 +246,7 @@ public class CloudNet extends CloudNetDriver {
         if (this.networkClient.connect(listener)) {
           // register a future that waits for the node to become available
           futures.add(CompletableFuture.runAsync(() -> {
-            while (!node.isAvailable()) {
+            while (!node.available()) {
               try {
                 //noinspection BusyWait
                 Thread.sleep(10);
@@ -270,11 +269,11 @@ public class CloudNet extends CloudNetDriver {
     }
 
     // we are now connected to all nodes - request the full cluster data set if the head node is not the current one
-    if (!this.nodeServerProvider.getHeadNode().equals(this.nodeServerProvider.getSelfNode())) {
+    if (!this.nodeServerProvider.headnode().equals(this.nodeServerProvider.selfNode())) {
       ChannelMessage.builder()
         .message("request_initial_cluster_data")
         .channel(NetworkConstants.INTERNAL_MSG_CHANNEL)
-        .targetNode(this.nodeServerProvider.getHeadNode().getNodeInfo().getUniqueId())
+        .targetNode(this.nodeServerProvider.headnode().nodeInfo().uniqueId())
         .build()
         .send();
     }
@@ -316,7 +315,7 @@ public class CloudNet extends CloudNetDriver {
         this.moduleProvider.unloadAll();
 
         // close all services
-        this.getCloudServiceProvider().deleteAllCloudServices();
+        this.cloudServiceProvider().deleteAllCloudServices();
 
         // close all networking listeners
         this.httpServer.close();
@@ -335,18 +334,18 @@ public class CloudNet extends CloudNetDriver {
   }
 
   @Override
-  public @NotNull String getComponentName() {
-    return this.configuration.getIdentity().getUniqueId();
+  public @NonNull String componentName() {
+    return this.configuration.identity().uniqueId();
   }
 
   @Override
-  public @NotNull String getNodeUniqueId() {
-    return this.configuration.getIdentity().getUniqueId();
+  public @NonNull String nodeUniqueId() {
+    return this.configuration.identity().uniqueId();
   }
 
   @Override
-  public @NotNull TemplateStorage getLocalTemplateStorage() {
-    var localStorage = this.getTemplateStorage(ServiceTemplate.LOCAL_STORAGE);
+  public @NonNull TemplateStorage localTemplateStorage() {
+    var localStorage = this.templateStorage(ServiceTemplate.LOCAL_STORAGE);
     if (localStorage == null) {
       // this should never happen
       throw new UnsupportedOperationException("Local template storage is not present");
@@ -356,21 +355,21 @@ public class CloudNet extends CloudNetDriver {
   }
 
   @Override
-  public @Nullable TemplateStorage getTemplateStorage(@NotNull String storage) {
-    return this.servicesRegistry.getService(TemplateStorage.class, storage);
+  public @Nullable TemplateStorage templateStorage(@NonNull String storage) {
+    return this.servicesRegistry.service(TemplateStorage.class, storage);
   }
 
   @Override
-  public @NotNull Collection<TemplateStorage> getAvailableTemplateStorages() {
-    return this.servicesRegistry.getServices(TemplateStorage.class);
+  public @NonNull Collection<TemplateStorage> availableTemplateStorages() {
+    return this.servicesRegistry.services(TemplateStorage.class);
   }
 
   @Override
-  public @NotNull AbstractDatabaseProvider getDatabaseProvider() {
+  public @NonNull AbstractDatabaseProvider databaseProvider() {
     return this.databaseProvider;
   }
 
-  public void setDatabaseProvider(@Nullable AbstractDatabaseProvider databaseProvider) {
+  public void databaseProvider(@Nullable AbstractDatabaseProvider databaseProvider) {
     if (databaseProvider != null) {
       try {
         // check if we have an old database provider and close that one if the new database provider is ready and connected
@@ -386,100 +385,99 @@ public class CloudNet extends CloudNetDriver {
   }
 
   @Override
-  public @NotNull INetworkClient getNetworkClient() {
+  public @NonNull INetworkClient networkClient() {
     return this.networkClient;
   }
 
   @Override
-  public @NotNull Collection<String> sendCommandLineAsPermissionUser(@NotNull UUID uniqueId,
-    @NotNull String commandLine) {
+  public @NonNull Collection<String> sendCommandLineAsPermissionUser(@NonNull UUID uniqueId,
+    @NonNull String commandLine) {
     // get the permission user
-    var user = this.permissionManagement.getUser(uniqueId);
+    var user = this.permissionManagement.user(uniqueId);
     if (user == null) {
       return Collections.emptyList();
     } else {
       var source = new PermissionUserCommandSource(user, this.permissionManagement);
       this.commandProvider.execute(source, commandLine).join();
 
-      return source.getMessages();
+      return source.messages();
     }
   }
 
   @Override
-  public @NotNull NodeMessenger getMessenger() {
-    return (NodeMessenger) super.getMessenger();
+  public @NonNull NodeMessenger messenger() {
+    return (NodeMessenger) super.messenger();
   }
 
   @Override
-  public @NotNull ICloudServiceManager getCloudServiceProvider() {
-    return (ICloudServiceManager) super.getCloudServiceProvider();
+  public @NonNull ICloudServiceManager cloudServiceProvider() {
+    return (ICloudServiceManager) super.cloudServiceProvider();
   }
 
   @Override
-  public @NotNull NodePermissionManagement getPermissionManagement() {
-    return (NodePermissionManagement) super.getPermissionManagement();
+  public @NonNull NodePermissionManagement permissionManagement() {
+    return (NodePermissionManagement) super.permissionManagement();
   }
 
   @Override
-  public void setPermissionManagement(@NotNull IPermissionManagement management) {
+  public void permissionManagement(@NonNull IPermissionManagement management) {
     // nodes can only use node permission managements
     Preconditions.checkArgument(management instanceof NodePermissionManagement);
-    super.setPermissionManagement(management);
+    super.permissionManagement(management);
     // re-register the handler for the permission management - the call to super.setPermissionManagement will not exit
     // if the permission management is invalid
     this.rpcProviderFactory.newHandler(IPermissionManagement.class, management).registerToDefaultRegistry();
   }
 
-  public @NotNull IConfiguration getConfig() {
+  public @NonNull IConfiguration config() {
     return this.configuration;
   }
 
-  public void setConfig(@NotNull IConfiguration configuration) {
-    Preconditions.checkNotNull(configuration);
+  public void config(@NonNull IConfiguration configuration) {
     this.configuration = configuration;
   }
 
-  public @NotNull IClusterNodeServerProvider getClusterNodeServerProvider() {
+  public @NonNull IClusterNodeServerProvider nodeServerProvider() {
     return this.nodeServerProvider;
   }
 
-  public @NotNull CloudNetTick getMainThread() {
+  public @NonNull CloudNetTick mainThread() {
     return this.mainThread;
   }
 
-  public @NotNull CommandProvider getCommandProvider() {
+  public @NonNull CommandProvider commandProvider() {
     return this.commandProvider;
   }
 
-  public @NotNull IConsole getConsole() {
+  public @NonNull IConsole console() {
     return this.console;
   }
 
-  public @NotNull ServiceVersionProvider getServiceVersionProvider() {
+  public @NonNull ServiceVersionProvider serviceVersionProvider() {
     return this.serviceVersionProvider;
   }
 
-  public @NotNull INetworkServer getNetworkServer() {
+  public @NonNull INetworkServer networkServer() {
     return this.networkServer;
   }
 
-  public @NotNull IHttpServer getHttpServer() {
+  public @NonNull IHttpServer httpServer() {
     return this.httpServer;
   }
 
-  public @NotNull QueuedConsoleLogHandler getLogHandler() {
+  public @NonNull QueuedConsoleLogHandler logHandler() {
     return this.logHandler;
   }
 
-  public @NotNull DefaultInstallation getInstallation() {
+  public @NonNull DefaultInstallation installation() {
     return this.installation;
   }
 
-  public @NotNull DataSyncRegistry getDataSyncRegistry() {
+  public @NonNull DataSyncRegistry dataSyncRegistry() {
     return this.dataSyncRegistry;
   }
 
-  public boolean isRunning() {
+  public boolean running() {
     return this.running.get();
   }
 }
