@@ -43,7 +43,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Queue;
-import java.util.stream.Collectors;
 import org.jetbrains.annotations.Nullable;
 
 @CommandPermission("cloudnet.command.groups")
@@ -54,7 +53,7 @@ public final class CommandGroups {
   public GroupConfiguration defaultGroupParser(CommandContext<CommandSource> $, Queue<String> input) {
     var name = input.remove();
 
-    var configuration = this.groupProvider().getGroupConfiguration(name);
+    var configuration = this.groupProvider().groupConfiguration(name);
     if (configuration == null) {
       throw new ArgumentNotAvailableException(I18n.trans("command-service-base-group-not-found"));
     }
@@ -64,31 +63,31 @@ public final class CommandGroups {
 
   @Suggestions("groupConfiguration")
   public List<String> suggestGroups(CommandContext<CommandSource> $, String input) {
-    return this.groupProvider().getGroupConfigurations().stream().map(INameable::getName).collect(Collectors.toList());
+    return this.groupProvider().groupConfigurations().stream().map(INameable::name).toList();
   }
 
   @CommandMethod("groups delete <name>")
   public void deleteGroup(CommandSource source, @Argument("name") GroupConfiguration configuration) {
-    CloudNet.getInstance().getGroupConfigurationProvider().removeGroupConfiguration(configuration);
+    CloudNet.instance().groupConfigurationProvider().removeGroupConfiguration(configuration);
     source.sendMessage(I18n.trans("command-groups-delete-group"));
   }
 
   @CommandMethod("groups create <name>")
   public void createGroup(CommandSource source, @Argument("name") String groupName) {
-    if (!this.groupProvider().isGroupConfigurationPresent(groupName)) {
+    if (!this.groupProvider().groupConfigurationPresent(groupName)) {
       this.groupProvider().addGroupConfiguration(GroupConfiguration.builder().name(groupName).build());
     }
   }
 
   @CommandMethod("groups reload")
   public void reloadGroups(CommandSource source) {
-    CloudNet.getInstance().getGroupConfigurationProvider().reload();
+    CloudNet.instance().groupConfigurationProvider().reload();
   }
 
   @CommandMethod("groups list")
   public void listGroups(CommandSource source) {
-    var groups = CloudNet.getInstance().getGroupConfigurationProvider()
-      .getGroupConfigurations();
+    var groups = CloudNet.instance().groupConfigurationProvider()
+      .groupConfigurations();
     if (groups.isEmpty()) {
       return;
     }
@@ -96,15 +95,15 @@ public final class CommandGroups {
     source.sendMessage("- Groups");
     source.sendMessage(" ");
     for (var group : groups) {
-      source.sendMessage("- " + group.getName());
+      source.sendMessage("- " + group.name());
     }
   }
 
   @CommandMethod("groups group <name>")
   public void displayGroup(CommandSource source, @Argument("name") GroupConfiguration group) {
     Collection<String> messages = new ArrayList<>();
-    messages.add("Name: " + group.getName());
-    messages.add("Environments:" + Arrays.toString(group.getTargetEnvironments().toArray()));
+    messages.add("Name: " + group.name());
+    messages.add("Environments:" + Arrays.toString(group.targetEnvironments().toArray()));
 
     CommandServiceConfiguration.applyServiceConfigurationDisplay(messages, group);
     source.sendMessage(messages);
@@ -116,7 +115,7 @@ public final class CommandGroups {
     @Argument("name") GroupConfiguration group,
     @Argument("environment") ServiceEnvironmentType environmentType
   ) {
-    group.getTargetEnvironments().add(environmentType.getName());
+    group.targetEnvironments().add(environmentType.name());
     this.groupProvider().addGroupConfiguration(group);
     source.sendMessage(I18n.trans("command-groups-add-environment-success"));
   }
@@ -127,7 +126,7 @@ public final class CommandGroups {
     @Argument("name") GroupConfiguration group,
     @Argument("environment") ServiceEnvironmentType environmentType
   ) {
-    if (group.getTargetEnvironments().remove(environmentType.getName())) {
+    if (group.targetEnvironments().remove(environmentType.name())) {
       this.groupProvider().addGroupConfiguration(group);
       source.sendMessage(I18n.trans("command-groups-remove-environment-success"));
     } else {
@@ -147,7 +146,7 @@ public final class CommandGroups {
       .excludes(this.parseExcludes(excludes))
       .build();
 
-    group.getDeployments().add(deployment);
+    group.deployments().add(deployment);
     this.updateGroup(group);
   }
 
@@ -157,7 +156,7 @@ public final class CommandGroups {
     @Argument("name") GroupConfiguration group,
     @Argument("template") ServiceTemplate template
   ) {
-    group.getTemplates().add(template);
+    group.templates().add(template);
     this.updateGroup(group);
   }
 
@@ -170,7 +169,7 @@ public final class CommandGroups {
   ) {
     var inclusion = ServiceRemoteInclusion.builder().url(url).destination(path).build();
 
-    group.getIncludes().add(inclusion);
+    group.includes().add(inclusion);
     this.updateGroup(group);
   }
 
@@ -181,7 +180,7 @@ public final class CommandGroups {
     @Greedy @Argument("options") String jvmOptions
   ) {
     for (var jvmOption : jvmOptions.split(" ")) {
-      group.getJvmOptions().add(jvmOption);
+      group.jvmOptions().add(jvmOption);
     }
     this.updateGroup(group);
   }
@@ -193,7 +192,7 @@ public final class CommandGroups {
     @Greedy @Argument("options") String processParameters
   ) {
     for (var processParameter : processParameters.split(" ")) {
-      group.getProcessParameters().add(processParameter);
+      group.processParameters().add(processParameter);
     }
     this.updateGroup(group);
   }
@@ -210,7 +209,7 @@ public final class CommandGroups {
       .excludes(this.parseExcludes(excludes))
       .build();
 
-    group.getDeployments().remove(deployment);
+    group.deployments().remove(deployment);
     this.updateGroup(group);
   }
 
@@ -220,7 +219,7 @@ public final class CommandGroups {
     @Argument("name") GroupConfiguration group,
     @Argument("template") ServiceTemplate template
   ) {
-    group.getTemplates().remove(template);
+    group.templates().remove(template);
     this.updateGroup(group);
   }
 
@@ -233,7 +232,7 @@ public final class CommandGroups {
   ) {
     var inclusion = ServiceRemoteInclusion.builder().url(url).destination(path).build();
 
-    group.getIncludes().remove(inclusion);
+    group.includes().remove(inclusion);
     this.updateGroup(group);
   }
 
@@ -244,7 +243,7 @@ public final class CommandGroups {
     @Greedy @Argument(value = "options") String jvmOptions
   ) {
     for (var jvmOption : jvmOptions.split(" ")) {
-      group.getJvmOptions().remove(jvmOption);
+      group.jvmOptions().remove(jvmOption);
     }
     this.updateGroup(group);
   }
@@ -256,14 +255,14 @@ public final class CommandGroups {
     @Greedy @Argument("options") String processParameters
   ) {
     for (var processParameter : processParameters.split(" ")) {
-      group.getProcessParameters().remove(processParameter);
+      group.processParameters().remove(processParameter);
     }
     this.updateGroup(group);
   }
 
   @CommandMethod("groups group <name> clear jvmOptions")
   public void clearJvmOptions(CommandSource source, @Argument("name") GroupConfiguration group) {
-    group.getJvmOptions().clear();
+    group.jvmOptions().clear();
     this.updateGroup(group);
   }
 
@@ -272,7 +271,7 @@ public final class CommandGroups {
   }
 
   private GroupConfigurationProvider groupProvider() {
-    return CloudNet.getInstance().getGroupConfigurationProvider();
+    return CloudNet.instance().groupConfigurationProvider();
   }
 
   private Collection<String> parseExcludes(@Nullable String excludes) {
