@@ -57,7 +57,6 @@ import de.dytanic.cloudnet.service.ServiceConfigurationPreparer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collection;
@@ -70,15 +69,15 @@ import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 import kong.unirest.Unirest;
 import kong.unirest.UnirestException;
-import org.jetbrains.annotations.NotNull;
+import lombok.NonNull;
 import org.jetbrains.annotations.Nullable;
 
 public abstract class AbstractService implements ICloudService {
 
-  protected static final Logger LOGGER = LogManager.getLogger(AbstractService.class);
+  protected static final Logger LOGGER = LogManager.logger(AbstractService.class);
 
   protected static final Path INCLUSION_TEMP_DIR = FileUtils.TEMP_DIR.resolve("inclusions");
-  protected static final Path WRAPPER_CONFIG_PATH = Paths.get(".wrapper", "wrapper.json");
+  protected static final Path WRAPPER_CONFIG_PATH = Path.of(".wrapper", "wrapper.json");
   protected static final Collection<String> DEFAULT_DEPLOYMENT_EXCLUSIONS = Arrays.asList("wrapper.jar", ".wrapper/");
 
   protected final IEventManager eventManager;
@@ -104,11 +103,11 @@ public abstract class AbstractService implements ICloudService {
   protected volatile ServiceInfoSnapshot currentServiceInfo;
 
   protected AbstractService(
-    @NotNull ServiceConfiguration configuration,
-    @NotNull ICloudServiceManager manager,
-    @NotNull IEventManager eventManager,
-    @NotNull CloudNet nodeInstance,
-    @NotNull ServiceConfigurationPreparer serviceConfigurationPreparer
+    @NonNull ServiceConfiguration configuration,
+    @NonNull ICloudServiceManager manager,
+    @NonNull IEventManager eventManager,
+    @NonNull CloudNet nodeInstance,
+    @NonNull ServiceConfigurationPreparer serviceConfigurationPreparer
   ) {
     this.eventManager = eventManager;
     this.nodeInstance = nodeInstance;
@@ -117,47 +116,47 @@ public abstract class AbstractService implements ICloudService {
     this.serviceConfigurationPreparer = serviceConfigurationPreparer;
 
     this.connectionKey = StringUtil.generateRandomString(64);
-    this.serviceDirectory = resolveServicePath(configuration.getServiceId(), manager, configuration.isStaticService());
+    this.serviceDirectory = resolveServicePath(configuration.serviceId(), manager, configuration.staticService());
 
     this.currentServiceInfo = new ServiceInfoSnapshot(
       System.currentTimeMillis(),
-      new HostAndPort(this.getNodeConfiguration().getHostAddress(), configuration.getPort()),
-      new HostAndPort(this.getNodeConfiguration().getConnectHostAddress(), configuration.getPort()),
+      new HostAndPort(this.nodeConfiguration().hostAddress(), configuration.port()),
+      new HostAndPort(this.nodeConfiguration().connectHostAddress(), configuration.port()),
       ProcessSnapshot.empty(),
       configuration,
       -1,
       ServiceLifeCycle.PREPARED,
-      configuration.getProperties());
+      configuration.properties());
     this.pushServiceInfoSnapshotUpdate(ServiceLifeCycle.PREPARED);
 
     manager.registerLocalService(this);
-    nodeInstance.getEventManager().callEvent(new CloudServiceCreateEvent(this));
+    nodeInstance.eventManager().callEvent(new CloudServiceCreateEvent(this));
   }
 
-  protected static @NotNull Path resolveServicePath(
-    @NotNull ServiceId serviceId,
-    @NotNull ICloudServiceManager manager,
+  protected static @NonNull Path resolveServicePath(
+    @NonNull ServiceId serviceId,
+    @NonNull ICloudServiceManager manager,
     boolean staticService
   ) {
     // validate the service name
-    if (!ServiceTask.NAMING_PATTERN.matcher(serviceId.getName()).matches()) {
+    if (!ServiceTask.NAMING_PATTERN.matcher(serviceId.name()).matches()) {
       throw new IllegalArgumentException(
-        "Service name \"" + serviceId.getName() + "\" must match pattern \"" + ServiceTask.NAMING_PATTERN + "\"");
+        "Service name \"" + serviceId.name() + "\" must match pattern \"" + ServiceTask.NAMING_PATTERN + "\"");
     }
     // resolve the path of the service in the logical directory
     return staticService
-      ? manager.getPersistentServicesDirectoryPath().resolve(serviceId.getName())
-      : manager.getTempDirectoryPath().resolve(String.format("%s_%s", serviceId.getName(), serviceId.getUniqueId()));
+      ? manager.persistentServicesDirectory().resolve(serviceId.name())
+      : manager.tempDirectory().resolve(String.format("%s_%s", serviceId.name(), serviceId.uniqueId()));
   }
 
   @Override
-  public @NotNull ServiceInfoSnapshot getServiceInfoSnapshot() {
+  public @NonNull ServiceInfoSnapshot serviceInfo() {
     return this.currentServiceInfo;
   }
 
   @Override
-  public boolean isValid() {
-    return this.currentServiceInfo.getLifeCycle() != ServiceLifeCycle.DELETED;
+  public boolean valid() {
+    return this.currentServiceInfo.lifeCycle() != ServiceLifeCycle.DELETED;
   }
 
   @Override
@@ -165,44 +164,44 @@ public abstract class AbstractService implements ICloudService {
     // check if the service is able to serve the request
     if (this.networkChannel != null) {
       var response = ChannelMessage.builder()
-        .targetService(this.getServiceId().getName())
+        .targetService(this.serviceId().name())
         .message("request_update_service_information")
         .channel(NetworkConstants.INTERNAL_MSG_CHANNEL)
         .build()
         .sendSingleQuery();
-      return response == null ? this.currentServiceInfo : response.getContent().readObject(ServiceInfoSnapshot.class);
+      return response == null ? this.currentServiceInfo : response.content().readObject(ServiceInfoSnapshot.class);
     } else {
       return this.currentServiceInfo;
     }
   }
 
   @Override
-  public void addServiceTemplate(@NotNull ServiceTemplate serviceTemplate) {
-    this.waitingTemplates.add(Preconditions.checkNotNull(serviceTemplate, "template"));
+  public void addServiceTemplate(@NonNull ServiceTemplate serviceTemplate) {
+    this.waitingTemplates.add(serviceTemplate);
   }
 
   @Override
-  public void addServiceRemoteInclusion(@NotNull ServiceRemoteInclusion serviceRemoteInclusion) {
-    this.waitingRemoteInclusions.add(Preconditions.checkNotNull(serviceRemoteInclusion, "remoteInclusion"));
+  public void addServiceRemoteInclusion(@NonNull ServiceRemoteInclusion serviceRemoteInclusion) {
+    this.waitingRemoteInclusions.add(serviceRemoteInclusion);
   }
 
   @Override
-  public void addServiceDeployment(@NotNull ServiceDeployment serviceDeployment) {
-    this.waitingDeployments.add(Preconditions.checkNotNull(serviceDeployment, "deployment"));
+  public void addServiceDeployment(@NonNull ServiceDeployment serviceDeployment) {
+    this.waitingDeployments.add(serviceDeployment);
   }
 
   @Override
-  public @NotNull IServiceConsoleLogCache getServiceConsoleLogCache() {
+  public @NonNull IServiceConsoleLogCache serviceConsoleLogCache() {
     return this.logCache;
   }
 
   @Override
-  public void setCloudServiceLifeCycle(@NotNull ServiceLifeCycle lifeCycle) {
+  public void updateLifecycle(@NonNull ServiceLifeCycle lifeCycle) {
     try {
       // prevent multiple service updates at the same time
       this.lifecycleLock.lock();
       // prevent changing the lifecycle to an incompatible lifecycle
-      if (!this.getLifeCycle().canChangeTo(lifeCycle)) {
+      if (!this.lifeCycle().canChangeTo(lifeCycle)) {
         return;
       }
       // select the appropriate method for the lifecycle
@@ -219,7 +218,7 @@ public abstract class AbstractService implements ICloudService {
         case RUNNING: {
           if (this.preLifecycleChange(ServiceLifeCycle.RUNNING)) {
             // check if we can start the process now
-            if (this.getLifeCycle() == ServiceLifeCycle.PREPARED && this.canStartNow()) {
+            if (this.lifeCycle() == ServiceLifeCycle.PREPARED && this.canStartNow()) {
               this.prepareService();
               this.startProcess();
               // update the current service info
@@ -232,11 +231,11 @@ public abstract class AbstractService implements ICloudService {
         case STOPPED: {
           if (this.preLifecycleChange(ServiceLifeCycle.STOPPED)) {
             // check if we should delete the service when stopping
-            if (this.getServiceConfiguration().isAutoDeleteOnStop()) {
+            if (this.serviceConfiguration().autoDeleteOnStop()) {
               this.doDelete();
               // update the current service info
               this.pushServiceInfoSnapshotUpdate(ServiceLifeCycle.DELETED);
-            } else if (this.getLifeCycle() == ServiceLifeCycle.RUNNING) {
+            } else if (this.lifeCycle() == ServiceLifeCycle.RUNNING) {
               this.stopProcess();
               this.doRemoveFilesAfterStop();
               // reset the service lifecycle to prepared
@@ -265,7 +264,7 @@ public abstract class AbstractService implements ICloudService {
 
   @Override
   public void includeWaitingServiceTemplates() {
-    this.includeWaitingServiceTemplates(false);
+    this.includeWaitingServiceTemplates(true);
   }
 
   @Override
@@ -273,33 +272,33 @@ public abstract class AbstractService implements ICloudService {
     ServiceRemoteInclusion inclusion;
     while ((inclusion = this.waitingRemoteInclusions.poll()) != null) {
       // prepare the connection from which we load the inclusion
-      var getRequest = Unirest.get(inclusion.getUrl());
+      var getRequest = Unirest.get(inclusion.url());
       // put the given http headers
-      if (inclusion.getProperties().contains("httpHeaders")) {
-        var headers = inclusion.getProperties().getDocument("httpHeaders");
+      if (inclusion.properties().contains("httpHeaders")) {
+        var headers = inclusion.properties().getDocument("httpHeaders");
         for (var key : headers.keys()) {
           getRequest.header(key, headers.get(key).toString());
         }
       }
       // check if we should load the inclusion
       if (!this.eventManager.callEvent(new CloudServicePreLoadInclusionEvent(this, inclusion, getRequest))
-        .isCancelled()) {
+        .cancelled()) {
         // get a target path based on the download url
         var destination = INCLUSION_TEMP_DIR.resolve(
-          Base64.getEncoder().encodeToString(inclusion.getUrl().getBytes(StandardCharsets.UTF_8)).replace('/', '_'));
+          Base64.getEncoder().encodeToString(inclusion.url().getBytes(StandardCharsets.UTF_8)).replace('/', '_'));
         // download the file from the given url to the temp path if it does not exist
         if (Files.notExists(destination)) {
           try {
             // we only support success codes for downloading the file
             getRequest.asFile(destination.toString());
           } catch (UnirestException exception) {
-            LOGGER.severe("Unable to download inclusion from %s to %s", exception.getCause(), inclusion.getUrl(),
+            LOGGER.severe("Unable to download inclusion from %s to %s", exception.getCause(), inclusion.url(),
               destination);
             continue;
           }
         }
         // resolve the desired output path
-        var target = this.serviceDirectory.resolve(inclusion.getDestination());
+        var target = this.serviceDirectory.resolve(inclusion.destination());
         FileUtils.ensureChild(this.serviceDirectory, target);
         // copy the file to the desired output path
         FileUtils.copy(destination, target);
@@ -326,84 +325,84 @@ public abstract class AbstractService implements ICloudService {
   @Override
   public void doDelete() {
     // stop the process if it's running
-    if (this.currentServiceInfo.getLifeCycle() == ServiceLifeCycle.RUNNING || this.isAlive()) {
+    if (this.currentServiceInfo.lifeCycle() == ServiceLifeCycle.RUNNING || this.alive()) {
       this.stopProcess();
     }
     // execute all deployments which are still waiting - delete all requested files before that
     this.doRemoveFilesAfterStop();
     this.removeAndExecuteDeployments();
     // remove the current directory if the service is not static
-    if (!this.getServiceConfiguration().isStaticService()) {
+    if (!this.serviceConfiguration().staticService()) {
       FileUtils.delete(this.serviceDirectory);
     }
   }
 
   @Override
-  public @NotNull Queue<ServiceRemoteInclusion> getWaitingIncludes() {
+  public @NonNull Queue<ServiceRemoteInclusion> waitingIncludes() {
     return this.waitingRemoteInclusions;
   }
 
   @Override
-  public @NotNull Queue<ServiceTemplate> getWaitingTemplates() {
+  public @NonNull Queue<ServiceTemplate> waitingTemplates() {
     return this.waitingTemplates;
   }
 
   @Override
-  public @NotNull Queue<ServiceDeployment> getWaitingDeployments() {
+  public @NonNull Queue<ServiceDeployment> waitingDeployments() {
     return this.waitingDeployments;
   }
 
   @Override
-  public @NotNull ServiceLifeCycle getLifeCycle() {
-    return this.currentServiceInfo.getLifeCycle();
+  public @NonNull ServiceLifeCycle lifeCycle() {
+    return this.currentServiceInfo.lifeCycle();
   }
 
   @Override
-  public @NotNull ICloudServiceManager getCloudServiceManager() {
+  public @NonNull ICloudServiceManager cloudServiceManager() {
     return this.cloudServiceManager;
   }
 
   @Override
-  public @NotNull ServiceConfiguration getServiceConfiguration() {
-    return this.currentServiceInfo.getConfiguration();
+  public @NonNull ServiceConfiguration serviceConfiguration() {
+    return this.currentServiceInfo.configuration();
   }
 
   @Override
-  public @NotNull ServiceId getServiceId() {
-    return this.currentServiceInfo.getServiceId();
+  public @NonNull ServiceId serviceId() {
+    return this.currentServiceInfo.serviceId();
   }
 
   @Override
-  public @NotNull String getConnectionKey() {
+  public @NonNull String connectionKey() {
     return this.connectionKey;
   }
 
   @Override
-  public @NotNull Path getDirectory() {
+  public @NonNull Path directory() {
     return this.serviceDirectory;
   }
 
   @Override
-  public @Nullable INetworkChannel getNetworkChannel() {
+  public @Nullable INetworkChannel networkChannel() {
     return this.networkChannel;
   }
 
   @Override
-  public void setNetworkChannel(@Nullable INetworkChannel channel) {
+  public void networkChannel(@Nullable INetworkChannel channel) {
     Preconditions.checkArgument(this.networkChannel == null || channel == null);
     // close the channel if the new channel is null
     if (this.networkChannel != null) {
       this.networkChannel.close();
-      this.currentServiceInfo.setConnectedTime(0);
+      this.currentServiceInfo.connectedTime(0);
     } else {
-      this.currentServiceInfo.setConnectedTime(System.currentTimeMillis());
+      this.currentServiceInfo.connectedTime(System.currentTimeMillis());
     }
     // set the new channel
     this.networkChannel = channel;
   }
 
   @Override
-  public @NotNull ServiceInfoSnapshot getLastServiceInfoSnapshot() {
+  public @NonNull ServiceInfoSnapshot lastServiceInfoSnapshot() {
     return this.lastServiceInfo;
   }
 
@@ -419,18 +418,18 @@ public abstract class AbstractService implements ICloudService {
   }
 
   @Override
-  public void updateServiceInfoSnapshot(@NotNull ServiceInfoSnapshot serviceInfoSnapshot) {
+  public void updateServiceInfoSnapshot(@NonNull ServiceInfoSnapshot serviceInfoSnapshot) {
     this.lastServiceInfo = this.currentServiceInfo;
-    this.currentServiceInfo = Preconditions.checkNotNull(serviceInfoSnapshot, "serviceInfoSnapshot");
+    this.currentServiceInfo = serviceInfoSnapshot;
   }
 
   @Override
-  public Queue<String> getCachedLogMessages() {
-    return this.getServiceConsoleLogCache().getCachedLogMessages();
+  public Queue<String> cachedLogMessages() {
+    return this.serviceConsoleLogCache().cachedLogMessages();
   }
 
   @Override
-  public boolean toggleScreenEvents(@NotNull ChannelMessageSender channelMessageSender, @NotNull String channel) {
+  public boolean toggleScreenEvents(@NonNull ChannelMessageSender channelMessageSender, @NonNull String channel) {
     var target = channelMessageSender.toTarget();
     if (this.logTargets.remove(target) != null) {
       return false;
@@ -438,73 +437,73 @@ public abstract class AbstractService implements ICloudService {
     return this.logTargets.put(target, channel) == null;
   }
 
-  protected @NotNull IConfiguration getNodeConfiguration() {
-    return this.nodeInstance.getConfig();
+  protected @NonNull IConfiguration nodeConfiguration() {
+    return this.nodeInstance.config();
   }
 
-  protected void includeWaitingServiceTemplates(boolean automaticRequest) {
+  protected void includeWaitingServiceTemplates(boolean force) {
     this.waitingTemplates.stream()
       .filter(template -> {
         // always allow manual requests & non-static service copies
-        if (!automaticRequest || !this.getServiceConfiguration().isStaticService()) {
+        if (force || !this.serviceConfiguration().staticService()) {
           return true;
         }
         // only allow this template to be copied if explicitly defined
-        return template.shouldAlwaysCopyToStaticServices();
+        return template.alwaysCopyToStaticServices();
       })
       .sorted()
       .forEachOrdered(template -> {
         // remove the entry
         this.waitingTemplates.remove(template);
         // check if we should load the template
-        var storage = template.storage().getWrappedStorage();
-        if (!this.eventManager.callEvent(new CloudServiceTemplateLoadEvent(this, storage, template)).isCancelled()) {
+        var storage = template.storage().wrappedStorage();
+        if (!this.eventManager.callEvent(new CloudServiceTemplateLoadEvent(this, storage, template)).cancelled()) {
           // the event is not cancelled - copy the template
           storage.copy(template, this.serviceDirectory);
         }
       });
   }
 
-  protected void executeDeployment(@NotNull ServiceDeployment deployment) {
+  protected void executeDeployment(@NonNull ServiceDeployment deployment) {
     // check if we should execute the deployment
-    var storage = deployment.getTemplate().storage().getWrappedStorage();
-    if (!this.eventManager.callEvent(new CloudServiceDeploymentEvent(this, storage, deployment)).isCancelled()) {
+    var storage = deployment.template().storage().wrappedStorage();
+    if (!this.eventManager.callEvent(new CloudServiceDeploymentEvent(this, storage, deployment)).cancelled()) {
       // execute the deployment
-      storage.deployDirectory(this.serviceDirectory, deployment.getTemplate(), path -> {
+      storage.deployDirectory(this.serviceDirectory, deployment.template(), path -> {
         // normalize the name of the path
         var fileName = Files.isDirectory(path)
           ? path.getFileName().toString() + '/'
           : path.getFileName().toString();
         // check if the file is ignored
-        return deployment.getExcludes().stream().noneMatch(pattern -> fileName.matches(pattern.replace("*", "(.*)")))
+        return deployment.excludes().stream().noneMatch(pattern -> fileName.matches(pattern.replace("*", "(.*)")))
           && !DEFAULT_DEPLOYMENT_EXCLUSIONS.contains(fileName);
       });
     }
   }
 
   protected void doRemoveFilesAfterStop() {
-    for (var file : this.serviceConfiguration.getDeletedFilesAfterStop()) {
+    for (var file : this.serviceConfiguration.deletedFilesAfterStop()) {
       FileUtils.delete(this.serviceDirectory.resolve(file));
     }
   }
 
-  protected boolean preLifecycleChange(@NotNull ServiceLifeCycle targetLifecycle) {
-    return !this.eventManager.callEvent(new CloudServicePreLifecycleEvent(this, targetLifecycle)).isCancelled();
+  protected boolean preLifecycleChange(@NonNull ServiceLifeCycle targetLifecycle) {
+    return !this.eventManager.callEvent(new CloudServicePreLifecycleEvent(this, targetLifecycle)).cancelled();
   }
 
-  protected void pushServiceInfoSnapshotUpdate(@NotNull ServiceLifeCycle lifeCycle) {
+  protected void pushServiceInfoSnapshotUpdate(@NonNull ServiceLifeCycle lifeCycle) {
     // save the current service info
     this.lastServiceInfo = this.currentServiceInfo;
     // update the current info
     this.currentServiceInfo = new ServiceInfoSnapshot(
-      this.lastServiceInfo.getCreationTime(),
-      this.lastServiceInfo.getAddress(),
-      this.lastServiceInfo.getConnectAddress(),
-      this.isAlive() ? this.lastServiceInfo.getProcessSnapshot() : ProcessSnapshot.empty(),
-      this.lastServiceInfo.getConfiguration(),
-      this.networkChannel == null ? -1 : this.lastServiceInfo.getConnectedTime(),
-      Preconditions.checkNotNull(lifeCycle, "lifecycle"),
-      this.lastServiceInfo.getProperties());
+      this.lastServiceInfo.creationTime(),
+      this.lastServiceInfo.address(),
+      this.lastServiceInfo.connectAddress(),
+      this.alive() ? this.lastServiceInfo.processSnapshot() : ProcessSnapshot.empty(),
+      this.lastServiceInfo.configuration(),
+      this.networkChannel == null ? -1 : this.lastServiceInfo.connectedTime(),
+      lifeCycle,
+      this.lastServiceInfo.properties());
     // remove the service in the local manager if the service was deleted
     if (lifeCycle == ServiceLifeCycle.DELETED) {
       this.cloudServiceManager.unregisterLocalService(this);
@@ -516,19 +515,19 @@ public abstract class AbstractService implements ICloudService {
       .targetAll()
       .message("update_service_lifecycle")
       .channel(NetworkConstants.INTERNAL_MSG_CHANNEL)
-      .buffer(DataBuf.empty().writeObject(this.lastServiceInfo.getLifeCycle()).writeObject(this.currentServiceInfo))
+      .buffer(DataBuf.empty().writeObject(this.lastServiceInfo.lifeCycle()).writeObject(this.currentServiceInfo))
       .build()
       .send();
   }
 
   protected boolean canStartNow() {
     // check jvm heap size
-    if (this.cloudServiceManager.getCurrentUsedHeapMemory()
-      + this.getServiceConfiguration().getProcessConfig().getMaxHeapMemorySize()
-      >= this.getNodeConfiguration().getMaxMemory()) {
+    if (this.cloudServiceManager.currentUsedHeapMemory()
+      + this.serviceConfiguration().processConfig().maxHeapMemorySize()
+      >= this.nodeConfiguration().maxMemory()) {
       // schedule a retry
-      if (this.getNodeConfiguration().isRunBlockedServiceStartTryLaterAutomatic()) {
-        CloudNet.getInstance().getMainThread().runTask(this::start);
+      if (this.nodeConfiguration().runBlockedServiceStartTryLaterAutomatic()) {
+        CloudNet.instance().mainThread().runTask(this::start);
       } else {
         LOGGER.info(I18n.trans("cloud-service-manager-max-memory-error"));
       }
@@ -536,10 +535,10 @@ public abstract class AbstractService implements ICloudService {
       return false;
     }
     // check for cpu usage
-    if (CPUUsageResolver.getSystemCPUUsage() >= this.getNodeConfiguration().getMaxCPUUsageToStartServices()) {
+    if (CPUUsageResolver.systemCPUUsage() >= this.nodeConfiguration().maxCPUUsageToStartServices()) {
       // schedule a retry
-      if (this.getNodeConfiguration().isRunBlockedServiceStartTryLaterAutomatic()) {
-        CloudNet.getInstance().getMainThread().runTask(this::start);
+      if (this.nodeConfiguration().runBlockedServiceStartTryLaterAutomatic()) {
+        CloudNet.instance().mainThread().runTask(this::start);
       } else {
         LOGGER.info(I18n.trans("cloud-service-manager-cpu-usage-to-high-error"));
       }
@@ -555,23 +554,23 @@ public abstract class AbstractService implements ICloudService {
     var firstStartup = Files.notExists(this.serviceDirectory);
     FileUtils.createDirectory(this.serviceDirectory);
     // write the configuration file for the service
-    var listeners = this.getNodeConfiguration().getIdentity().getListeners();
+    var listeners = this.nodeConfiguration().identity().listeners();
     JsonDocument.newDocument()
-      .append("connectionKey", this.getConnectionKey())
+      .append("connectionKey", this.connectionKey())
       .append("serviceInfoSnapshot", this.currentServiceInfo)
-      .append("serviceConfiguration", this.getServiceConfiguration())
-      .append("sslConfiguration", this.getNodeConfiguration().getServerSslConfig())
+      .append("serviceConfiguration", this.serviceConfiguration())
+      .append("sslConfiguration", this.nodeConfiguration().serverSSLConfig())
       .append("targetListener", listeners[ThreadLocalRandom.current().nextInt(listeners.length)])
       .write(this.serviceDirectory.resolve(WRAPPER_CONFIG_PATH));
     // load the ssl configuration if enabled
-    var sslConfiguration = this.getNodeConfiguration().getServerSslConfig();
-    if (sslConfiguration.isEnabled()) {
+    var sslConfiguration = this.nodeConfiguration().serverSSLConfig();
+    if (sslConfiguration.enabled()) {
       this.copySslConfiguration(sslConfiguration);
     }
     // add all components
-    this.waitingTemplates.addAll(this.serviceConfiguration.getTemplates());
-    this.waitingDeployments.addAll(this.serviceConfiguration.getDeployments());
-    this.waitingRemoteInclusions.addAll(this.serviceConfiguration.getIncludes());
+    this.waitingTemplates.addAll(this.serviceConfiguration.templates());
+    this.waitingDeployments.addAll(this.serviceConfiguration.deployments());
+    this.waitingRemoteInclusions.addAll(this.serviceConfiguration.includes());
     // load the inclusions
     this.includeWaitingServiceInclusions();
     // check if we should load the templates of the service
@@ -580,19 +579,19 @@ public abstract class AbstractService implements ICloudService {
     this.serviceConfigurationPreparer.configure(this.nodeInstance, this);
   }
 
-  protected void copySslConfiguration(@NotNull SSLConfiguration configuration) {
+  protected void copySslConfiguration(@NonNull SSLConfiguration configuration) {
     var wrapperDir = this.serviceDirectory.resolve(".wrapper");
     // copy the certificate if available
-    if (configuration.getCertificatePath() != null && Files.exists(configuration.getCertificatePath())) {
-      FileUtils.copy(configuration.getCertificatePath(), wrapperDir.resolve("certificate"));
+    if (configuration.certificatePath() != null && Files.exists(configuration.certificatePath())) {
+      FileUtils.copy(configuration.certificatePath(), wrapperDir.resolve("certificate"));
     }
     // copy the private key if available
-    if (configuration.getPrivateKeyPath() != null && Files.exists(configuration.getPrivateKeyPath())) {
-      FileUtils.copy(configuration.getPrivateKeyPath(), wrapperDir.resolve("privateKey"));
+    if (configuration.privateKeyPath() != null && Files.exists(configuration.privateKeyPath())) {
+      FileUtils.copy(configuration.privateKeyPath(), wrapperDir.resolve("privateKey"));
     }
     // copy the trust certificate if available
-    if (configuration.getTrustCertificatePath() != null && Files.exists(configuration.getTrustCertificatePath())) {
-      FileUtils.copy(configuration.getTrustCertificatePath(), wrapperDir.resolve("trustCertificate"));
+    if (configuration.trustCertificatePath() != null && Files.exists(configuration.trustCertificatePath())) {
+      FileUtils.copy(configuration.trustCertificatePath(), wrapperDir.resolve("trustCertificate"));
     }
   }
 
