@@ -34,7 +34,7 @@ import de.dytanic.cloudnet.driver.service.ServiceEnvironmentType;
 import de.dytanic.cloudnet.driver.service.ServiceInfoSnapshot;
 import de.dytanic.cloudnet.driver.service.ServiceLifeCycle;
 import de.dytanic.cloudnet.driver.service.ServiceTask;
-import de.dytanic.cloudnet.event.service.CloudServiceCrashEvent;
+import de.dytanic.cloudnet.event.service.CloudServicePreForceStopEvent;
 import de.dytanic.cloudnet.service.ICloudService;
 import de.dytanic.cloudnet.service.ICloudServiceFactory;
 import de.dytanic.cloudnet.service.ICloudServiceManager;
@@ -49,7 +49,6 @@ import de.dytanic.cloudnet.service.defaults.factory.JVMServiceFactory;
 import de.dytanic.cloudnet.service.defaults.provider.EmptySpecificCloudServiceProvider;
 import de.dytanic.cloudnet.service.defaults.provider.RemoteNodeCloudServiceProvider;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Map;
@@ -57,20 +56,19 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
-import org.jetbrains.annotations.NotNull;
+import lombok.NonNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.UnknownNullability;
 import org.jetbrains.annotations.UnmodifiableView;
 
 public class DefaultCloudServiceManager implements ICloudServiceManager {
 
-  protected static final Path TEMP_SERVICE_DIR = Paths.get(
+  protected static final Path TEMP_SERVICE_DIR = Path.of(
     System.getProperty("cloudnet.tempDir.services", "temp/services"));
-  protected static final Path PERSISTENT_SERVICE_DIR = Paths.get(
+  protected static final Path PERSISTENT_SERVICE_DIR = Path.of(
     System.getProperty("cloudnet.persistable.services.path", "local/services"));
 
-  private static final Logger LOGGER = LogManager.getLogger(ICloudServiceManager.class);
+  private static final Logger LOGGER = LogManager.logger(ICloudServiceManager.class);
 
   protected final RPCSender sender;
   protected final IClusterNodeServerProvider clusterNodeServerProvider;
@@ -79,18 +77,18 @@ public class DefaultCloudServiceManager implements ICloudServiceManager {
   protected final Map<String, ICloudServiceFactory> cloudServiceFactories = new ConcurrentHashMap<>();
   protected final Map<ServiceEnvironmentType, ServiceConfigurationPreparer> preparers = new ConcurrentHashMap<>();
 
-  public DefaultCloudServiceManager(@NotNull CloudNet nodeInstance) {
-    this.clusterNodeServerProvider = nodeInstance.getClusterNodeServerProvider();
+  public DefaultCloudServiceManager(@NonNull CloudNet nodeInstance) {
+    this.clusterNodeServerProvider = nodeInstance.nodeServerProvider();
     // rpc init
-    this.sender = nodeInstance.getRPCProviderFactory().providerForClass(null, GeneralCloudServiceProvider.class);
-    nodeInstance.getRPCProviderFactory()
+    this.sender = nodeInstance.rpcProviderFactory().providerForClass(null, GeneralCloudServiceProvider.class);
+    nodeInstance.rpcProviderFactory()
       .newHandler(GeneralCloudServiceProvider.class, this)
       .registerToDefaultRegistry();
-    nodeInstance.getRPCProviderFactory()
+    nodeInstance.rpcProviderFactory()
       .newHandler(SpecificCloudServiceProvider.class, null)
       .registerToDefaultRegistry();
     // register the default factory
-    this.addCloudServiceFactory("jvm", new JVMServiceFactory(nodeInstance, nodeInstance.getEventManager()));
+    this.addCloudServiceFactory("jvm", new JVMServiceFactory(nodeInstance, nodeInstance.eventManager()));
     // register the default configuration preparers
     this.addServicePreparer(ServiceEnvironmentType.NUKKIT, new NukkitConfigurationPreparer());
     this.addServicePreparer(ServiceEnvironmentType.VELOCITY, new VelocityConfigurationPreparer());
@@ -99,35 +97,35 @@ public class DefaultCloudServiceManager implements ICloudServiceManager {
     this.addServicePreparer(ServiceEnvironmentType.WATERDOG_PE, new WaterdogPEConfigurationPreparer());
     this.addServicePreparer(ServiceEnvironmentType.MINECRAFT_SERVER, new VanillaServiceConfigurationPreparer());
     // cluster data sync
-    nodeInstance.getDataSyncRegistry().registerHandler(
+    nodeInstance.dataSyncRegistry().registerHandler(
       DataSyncHandler.<ServiceInfoSnapshot>builder()
         .key("services")
         .alwaysForce()
-        .nameExtractor(INameable::getName)
-        .dataCollector(this::getCloudServices)
+        .nameExtractor(INameable::name)
+        .dataCollector(this::services)
         .convertObject(ServiceInfoSnapshot.class)
         .writer(ser -> {
           // ugly hack to get the channel of the service's associated node
-          var node = this.clusterNodeServerProvider.getNodeServer(ser.getServiceId().getNodeUniqueId());
-          if (node != null && node.isAvailable()) {
-            this.handleServiceUpdate(ser, node.getChannel());
+          var node = this.clusterNodeServerProvider.nodeServer(ser.serviceId().nodeUniqueId());
+          if (node != null && node.available()) {
+            this.handleServiceUpdate(ser, node.channel());
           }
         })
-        .currentGetter(group -> this.getSpecificProviderByName(group.getName()).getServiceInfoSnapshot())
+        .currentGetter(group -> this.specificProviderByName(group.name()).serviceInfo())
         .build());
     // schedule the updating of the local service log cache
-    nodeInstance.getMainThread().scheduleTask(() -> {
-      for (var service : this.getLocalCloudServices()) {
+    nodeInstance.mainThread().scheduleTask(() -> {
+      for (var service : this.localCloudServices()) {
         // we only need to look at running services
-        if (service.getLifeCycle() == ServiceLifeCycle.RUNNING) {
+        if (service.lifeCycle() == ServiceLifeCycle.RUNNING) {
           // detect dead services and stop them
-          if (service.isAlive()) {
-            service.getServiceConsoleLogCache().update();
-            LOGGER.fine("Updated service log cache of %s", null, service.getServiceId().getName());
+          if (service.alive()) {
+            service.serviceConsoleLogCache().update();
+            LOGGER.fine("Updated service log cache of %s", null, service.serviceId().name());
           } else {
-            nodeInstance.getEventManager().callEvent(new CloudServiceCrashEvent(service));
+            nodeInstance.eventManager().callEvent(new CloudServicePreForceStopEvent(service));
             service.stop();
-            LOGGER.fine("Stopped dead service %s", null, service.getServiceId().getName());
+            LOGGER.fine("Stopped dead service %s", null, service.serviceId().name());
           }
         }
       }
@@ -136,239 +134,239 @@ public class DefaultCloudServiceManager implements ICloudServiceManager {
   }
 
   @Override
-  public @NotNull SpecificCloudServiceProvider getSpecificProvider(@NotNull UUID serviceUniqueId) {
+  public @NonNull SpecificCloudServiceProvider specificProvider(@NonNull UUID serviceUniqueId) {
     return this.knownServices.getOrDefault(serviceUniqueId, EmptySpecificCloudServiceProvider.INSTANCE);
   }
 
   @Override
-  public @NotNull SpecificCloudServiceProvider getSpecificProviderByName(@NotNull String serviceName) {
+  public @NonNull SpecificCloudServiceProvider specificProviderByName(@NonNull String serviceName) {
     return this.knownServices.values().stream()
-      .filter(provider -> provider.getServiceInfoSnapshot() != null)
-      .filter(provider -> provider.getServiceInfoSnapshot().getServiceId().getName().equals(serviceName))
+      .filter(provider -> provider.serviceInfo() != null)
+      .filter(provider -> provider.serviceInfo().serviceId().name().equals(serviceName))
       .findFirst()
       .orElse(EmptySpecificCloudServiceProvider.INSTANCE);
   }
 
   @Override
-  public @UnmodifiableView @NotNull Collection<UUID> getServicesAsUniqueId() {
+  public @UnmodifiableView @NonNull Collection<UUID> servicesAsUniqueId() {
     return this.knownServices.values().stream()
-      .filter(provider -> provider.getServiceInfoSnapshot() != null)
-      .map(provider -> provider.getServiceInfoSnapshot().getServiceId().getUniqueId())
-      .collect(Collectors.toList());
+      .filter(provider -> provider.serviceInfo() != null)
+      .map(provider -> provider.serviceInfo().serviceId().uniqueId())
+      .toList();
   }
 
   @Override
-  public @UnmodifiableView @NotNull Collection<ServiceInfoSnapshot> getCloudServices() {
+  public @UnmodifiableView @NonNull Collection<ServiceInfoSnapshot> services() {
     return this.knownServices.values().stream()
-      .map(SpecificCloudServiceProvider::getServiceInfoSnapshot)
+      .map(SpecificCloudServiceProvider::serviceInfo)
       .filter(Objects::nonNull)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   @Override
-  public @UnmodifiableView @NotNull Collection<ServiceInfoSnapshot> getStartedCloudServices() {
+  public @UnmodifiableView @NonNull Collection<ServiceInfoSnapshot> runningServices() {
     return this.knownServices.values().stream()
-      .map(SpecificCloudServiceProvider::getServiceInfoSnapshot)
+      .map(SpecificCloudServiceProvider::serviceInfo)
       .filter(Objects::nonNull)
-      .filter(snapshot -> snapshot.getLifeCycle() == ServiceLifeCycle.RUNNING)
-      .collect(Collectors.toList());
+      .filter(snapshot -> snapshot.lifeCycle() == ServiceLifeCycle.RUNNING)
+      .toList();
   }
 
   @Override
-  public @UnmodifiableView @NotNull Collection<ServiceInfoSnapshot> getCloudServicesByTask(@NotNull String taskName) {
+  public @UnmodifiableView @NonNull Collection<ServiceInfoSnapshot> servicesByTask(@NonNull String taskName) {
     return this.knownServices.values().stream()
-      .map(SpecificCloudServiceProvider::getServiceInfoSnapshot)
+      .map(SpecificCloudServiceProvider::serviceInfo)
       .filter(Objects::nonNull)
-      .filter(snapshot -> snapshot.getServiceId().getTaskName().equals(taskName))
-      .collect(Collectors.toList());
+      .filter(snapshot -> snapshot.serviceId().taskName().equals(taskName))
+      .toList();
   }
 
   @Override
-  public @UnmodifiableView @NotNull Collection<ServiceInfoSnapshot> getCloudServicesByEnvironment(
-    @NotNull ServiceEnvironmentType environment
+  public @UnmodifiableView @NonNull Collection<ServiceInfoSnapshot> servicesByEnvironment(
+    @NonNull ServiceEnvironmentType environment
   ) {
     return this.knownServices.values().stream()
-      .map(SpecificCloudServiceProvider::getServiceInfoSnapshot)
+      .map(SpecificCloudServiceProvider::serviceInfo)
       .filter(Objects::nonNull)
-      .filter(snapshot -> snapshot.getServiceId().getEnvironment().equals(environment))
-      .collect(Collectors.toList());
+      .filter(snapshot -> snapshot.serviceId().environment().equals(environment))
+      .toList();
   }
 
   @Override
-  public @UnmodifiableView @NotNull Collection<ServiceInfoSnapshot> getCloudServicesByGroup(@NotNull String group) {
+  public @UnmodifiableView @NonNull Collection<ServiceInfoSnapshot> servicesByGroup(@NonNull String group) {
     return this.knownServices.values().stream()
-      .map(SpecificCloudServiceProvider::getServiceInfoSnapshot)
+      .map(SpecificCloudServiceProvider::serviceInfo)
       .filter(Objects::nonNull)
-      .filter(snapshot -> snapshot.getConfiguration().getGroups().contains(group))
-      .collect(Collectors.toList());
+      .filter(snapshot -> snapshot.configuration().groups().contains(group))
+      .toList();
   }
 
   @Override
-  public int getServicesCount() {
+  public int serviceCount() {
     return this.knownServices.size();
   }
 
   @Override
-  public int getServicesCountByGroup(@NotNull String group) {
-    return this.getCloudServicesByGroup(group).size();
+  public int serviceCountByGroup(@NonNull String group) {
+    return this.servicesByGroup(group).size();
   }
 
   @Override
-  public int getServicesCountByTask(@NotNull String taskName) {
-    return this.getCloudServicesByTask(taskName).size();
+  public int serviceCountByTask(@NonNull String taskName) {
+    return this.servicesByTask(taskName).size();
   }
 
   @Override
-  public @Nullable ServiceInfoSnapshot getCloudServiceByName(@NotNull String name) {
-    return this.getSpecificProviderByName(name).getServiceInfoSnapshot();
+  public @Nullable ServiceInfoSnapshot serviceByName(@NonNull String name) {
+    return this.specificProviderByName(name).serviceInfo();
   }
 
   @Override
-  public @Nullable ServiceInfoSnapshot getCloudService(@NotNull UUID uniqueId) {
-    return this.getSpecificProvider(uniqueId).getServiceInfoSnapshot();
+  public @Nullable ServiceInfoSnapshot service(@NonNull UUID uniqueId) {
+    return this.specificProvider(uniqueId).serviceInfo();
   }
 
   @Override
-  public @NotNull Collection<ICloudServiceFactory> getCloudServiceFactories() {
+  public @NonNull Collection<ICloudServiceFactory> cloudServiceFactories() {
     return Collections.unmodifiableCollection(this.cloudServiceFactories.values());
   }
 
   @Override
-  public @NotNull Optional<ICloudServiceFactory> getCloudServiceFactory(@NotNull String runtime) {
+  public @NonNull Optional<ICloudServiceFactory> cloudServiceFactory(@NonNull String runtime) {
     return Optional.ofNullable(this.cloudServiceFactories.get(runtime));
   }
 
   @Override
-  public void addCloudServiceFactory(@NotNull String runtime, @NotNull ICloudServiceFactory factory) {
+  public void addCloudServiceFactory(@NonNull String runtime, @NonNull ICloudServiceFactory factory) {
     this.cloudServiceFactories.putIfAbsent(runtime, factory);
   }
 
   @Override
-  public void removeCloudServiceFactory(@NotNull String runtime) {
+  public void removeCloudServiceFactory(@NonNull String runtime) {
     this.cloudServiceFactories.remove(runtime);
   }
 
   @Override
-  public @NotNull Collection<ServiceConfigurationPreparer> getServicePreparers() {
+  public @NonNull Collection<ServiceConfigurationPreparer> servicePreparers() {
     return Collections.unmodifiableCollection(this.preparers.values());
   }
 
   @Override
-  public @NotNull Optional<ServiceConfigurationPreparer> getServicePreparer(@NotNull ServiceEnvironmentType type) {
+  public @NonNull Optional<ServiceConfigurationPreparer> servicePreparer(@NonNull ServiceEnvironmentType type) {
     return Optional.ofNullable(this.preparers.get(type));
   }
 
   @Override
   public void addServicePreparer(
-    @NotNull ServiceEnvironmentType type,
-    @NotNull ServiceConfigurationPreparer preparer
+    @NonNull ServiceEnvironmentType type,
+    @NonNull ServiceConfigurationPreparer preparer
   ) {
     this.preparers.putIfAbsent(type, preparer);
   }
 
   @Override
-  public void removeServicePreparer(@NotNull ServiceEnvironmentType type) {
+  public void removeServicePreparer(@NonNull ServiceEnvironmentType type) {
     this.preparers.remove(type);
   }
 
   @Override
-  public @NotNull Path getTempDirectoryPath() {
+  public @NonNull Path tempDirectory() {
     return TEMP_SERVICE_DIR;
   }
 
   @Override
-  public @NotNull Path getPersistentServicesDirectoryPath() {
+  public @NonNull Path persistentServicesDirectory() {
     return PERSISTENT_SERVICE_DIR;
   }
 
   @Override
   public void startAllCloudServices() {
-    this.getLocalCloudServices().forEach(SpecificCloudServiceProvider::start);
+    this.localCloudServices().forEach(SpecificCloudServiceProvider::start);
   }
 
   @Override
   public void stopAllCloudServices() {
-    this.getLocalCloudServices().forEach(SpecificCloudServiceProvider::stop);
+    this.localCloudServices().forEach(SpecificCloudServiceProvider::stop);
   }
 
   @Override
   public void deleteAllCloudServices() {
-    this.getLocalCloudServices().forEach(SpecificCloudServiceProvider::delete);
+    this.localCloudServices().forEach(SpecificCloudServiceProvider::delete);
   }
 
   @Override
-  public @NotNull @UnmodifiableView Collection<ICloudService> getLocalCloudServices() {
+  public @NonNull @UnmodifiableView Collection<ICloudService> localCloudServices() {
     return this.knownServices.values().stream()
       .filter(provider -> provider instanceof ICloudService) // -> ICloudService => local service
       .map(provider -> (ICloudService) provider)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   @Override
-  public @Nullable ICloudService getLocalCloudService(@NotNull String name) {
-    var provider = this.getSpecificProviderByName(name);
+  public @Nullable ICloudService localCloudService(@NonNull String name) {
+    var provider = this.specificProviderByName(name);
     return provider instanceof ICloudService ? (ICloudService) provider : null;
   }
 
   @Override
-  public @Nullable ICloudService getLocalCloudService(@NotNull UUID uniqueId) {
+  public @Nullable ICloudService localCloudService(@NonNull UUID uniqueId) {
     var provider = this.knownServices.get(uniqueId);
     return provider instanceof ICloudService ? (ICloudService) provider : null;
   }
 
   @Override
-  public @Nullable ICloudService getLocalCloudService(@NotNull ServiceInfoSnapshot snapshot) {
-    return this.getLocalCloudService(snapshot.getServiceId().getUniqueId());
+  public @Nullable ICloudService localCloudService(@NonNull ServiceInfoSnapshot snapshot) {
+    return this.localCloudService(snapshot.serviceId().uniqueId());
   }
 
   @Override
-  public int getCurrentUsedHeapMemory() {
-    return this.getLocalCloudServices().stream()
-      .map(SpecificCloudServiceProvider::getServiceInfoSnapshot)
+  public int currentUsedHeapMemory() {
+    return this.localCloudServices().stream()
+      .map(SpecificCloudServiceProvider::serviceInfo)
       .filter(Objects::nonNull)
-      .filter(snapshot -> snapshot.getLifeCycle() == ServiceLifeCycle.RUNNING)
-      .mapToInt(snapshot -> snapshot.getConfiguration().getProcessConfig().getMaxHeapMemorySize())
+      .filter(snapshot -> snapshot.lifeCycle() == ServiceLifeCycle.RUNNING)
+      .mapToInt(snapshot -> snapshot.configuration().processConfig().maxHeapMemorySize())
       .sum();
   }
 
   @Override
-  public int getCurrentReservedMemory() {
-    return this.getLocalCloudServices().stream()
-      .map(SpecificCloudServiceProvider::getServiceInfoSnapshot)
+  public int currentReservedMemory() {
+    return this.localCloudServices().stream()
+      .map(SpecificCloudServiceProvider::serviceInfo)
       .filter(Objects::nonNull)
-      .mapToInt(snapshot -> snapshot.getConfiguration().getProcessConfig().getMaxHeapMemorySize())
+      .mapToInt(snapshot -> snapshot.configuration().processConfig().maxHeapMemorySize())
       .sum();
   }
 
   @Override
-  public void registerLocalService(@NotNull ICloudService service) {
-    this.knownServices.putIfAbsent(service.getServiceId().getUniqueId(), service);
+  public void registerLocalService(@NonNull ICloudService service) {
+    this.knownServices.putIfAbsent(service.serviceId().uniqueId(), service);
   }
 
   @Override
-  public void unregisterLocalService(@NotNull ICloudService service) {
-    this.knownServices.remove(service.getServiceId().getUniqueId());
+  public void unregisterLocalService(@NonNull ICloudService service) {
+    this.knownServices.remove(service.serviceId().uniqueId());
   }
 
   @Override
-  public void handleServiceUpdate(@NotNull ServiceInfoSnapshot snapshot, @UnknownNullability INetworkChannel source) {
+  public void handleServiceUpdate(@NonNull ServiceInfoSnapshot snapshot, @UnknownNullability INetworkChannel source) {
     // deleted services were removed on the other node - remove it here too
-    if (snapshot.getLifeCycle() == ServiceLifeCycle.DELETED) {
-      this.knownServices.remove(snapshot.getServiceId().getUniqueId());
-      LOGGER.fine("Deleted cloud service %s after lifecycle change to deleted", null, snapshot.getServiceId());
+    if (snapshot.lifeCycle() == ServiceLifeCycle.DELETED) {
+      this.knownServices.remove(snapshot.serviceId().uniqueId());
+      LOGGER.fine("Deleted cloud service %s after lifecycle change to deleted", null, snapshot.serviceId());
     } else {
       // register the service if the provider is available
-      var provider = this.knownServices.get(snapshot.getServiceId().getUniqueId());
+      var provider = this.knownServices.get(snapshot.serviceId().uniqueId());
       if (provider == null) {
         this.knownServices.putIfAbsent(
-          snapshot.getServiceId().getUniqueId(),
+          snapshot.serviceId().uniqueId(),
           new RemoteNodeCloudServiceProvider(this, this.sender, () -> source, snapshot));
-        LOGGER.fine("Registered remote service %s", null, snapshot.getServiceId());
+        LOGGER.fine("Registered remote service %s", null, snapshot.serviceId());
       } else if (provider instanceof RemoteNodeCloudServiceProvider) {
         // update the provider if possible - we need only to handle remote node providers as local providers will update
         // the snapshot directly "in" them
-        ((RemoteNodeCloudServiceProvider) provider).setSnapshot(snapshot);
-        LOGGER.fine("Updated service snapshot of %s to %s", null, snapshot.getServiceId(), snapshot);
+        ((RemoteNodeCloudServiceProvider) provider).snapshot(snapshot);
+        LOGGER.fine("Updated service snapshot of %s to %s", null, snapshot.serviceId(), snapshot);
       } else if (provider instanceof ICloudService) {
         // just set the service information locally - no further processing
         ((ICloudService) provider).updateServiceInfoSnapshot(snapshot);
@@ -377,63 +375,63 @@ public class DefaultCloudServiceManager implements ICloudServiceManager {
   }
 
   @Override
-  public @NotNull ICloudService createLocalCloudService(@NotNull ServiceConfiguration configuration) {
+  public @NonNull ICloudService createLocalCloudService(@NonNull ServiceConfiguration configuration) {
     // get the cloud service factory for the configuration
-    var factory = this.cloudServiceFactories.get(configuration.getRuntime());
+    var factory = this.cloudServiceFactories.get(configuration.runtime());
     if (factory == null) {
-      throw new IllegalArgumentException("No service factory for runtime " + configuration.getRuntime());
+      throw new IllegalArgumentException("No service factory for runtime " + configuration.runtime());
     }
     // create the new service using the factory
     return factory.createCloudService(this, configuration);
   }
 
   @Override
-  public @NotNull SpecificCloudServiceProvider selectOrCreateService(@NotNull ServiceTask task) {
+  public @NonNull SpecificCloudServiceProvider selectOrCreateService(@NonNull ServiceTask task) {
     // get all services of the given task, map it to its node unique id
-    var prepared = this.getCloudServicesByTask(task.getName())
+    var prepared = this.servicesByTask(task.name())
       .stream()
-      .filter(taskService -> taskService.getLifeCycle() == ServiceLifeCycle.PREPARED)
+      .filter(taskService -> taskService.lifeCycle() == ServiceLifeCycle.PREPARED)
       .map(service -> {
         // get the node server associated with the node
-        var nodeServer = this.clusterNodeServerProvider.getNodeServer(
-          service.getServiceId().getNodeUniqueId());
+        var nodeServer = this.clusterNodeServerProvider.nodeServer(
+          service.serviceId().nodeUniqueId());
         // the server should never be null - just to be sure
         return nodeServer == null ? null : new Pair<>(service, nodeServer);
       })
       .filter(Objects::nonNull)
-      .filter(pair -> pair.getSecond().isAvailable())
+      .filter(pair -> pair.second().available())
       .filter(pair -> {
         // filter out all nodes which are not able to start the service
-        var nodeInfoSnapshot = pair.getSecond().getNodeInfoSnapshot();
-        var maxHeapMemory = pair.getFirst().getConfiguration().getProcessConfig().getMaxHeapMemorySize();
+        var nodeInfoSnapshot = pair.second().nodeInfoSnapshot();
+        var maxHeapMemory = pair.first().configuration().processConfig().maxHeapMemorySize();
         // used + heap_of_service <= max
-        return nodeInfoSnapshot.getUsedMemory() + maxHeapMemory <= nodeInfoSnapshot.getMaxMemory();
+        return nodeInfoSnapshot.usedMemory() + maxHeapMemory <= nodeInfoSnapshot.maxMemory();
       })
       .min((left, right) -> {
         // begin by comparing the heap memory usage
         var chain = ComparisonChain.start().compare(
-          left.getSecond().getNodeInfoSnapshot().getUsedMemory()
-            + left.getFirst().getConfiguration().getProcessConfig().getMaxHeapMemorySize(),
-          right.getSecond().getNodeInfoSnapshot().getUsedMemory()
-            + right.getFirst().getConfiguration().getProcessConfig().getMaxHeapMemorySize());
+          left.second().nodeInfoSnapshot().usedMemory()
+            + left.first().configuration().processConfig().maxHeapMemorySize(),
+          right.second().nodeInfoSnapshot().usedMemory()
+            + right.first().configuration().processConfig().maxHeapMemorySize());
         // only include the cpu usage if both nodes can provide a value
-        if (left.getSecond().getNodeInfoSnapshot().getProcessSnapshot().getSystemCpuUsage() >= 0
-          && right.getSecond().getNodeInfoSnapshot().getProcessSnapshot().getSystemCpuUsage() >= 0) {
+        if (left.second().nodeInfoSnapshot().processSnapshot().systemCpuUsage() >= 0
+          && right.second().nodeInfoSnapshot().processSnapshot().systemCpuUsage() >= 0) {
           // add the system usage to the chain
           chain = chain.compare(
-            left.getSecond().getNodeInfoSnapshot().getProcessSnapshot().getSystemCpuUsage(),
-            right.getSecond().getNodeInfoSnapshot().getProcessSnapshot().getSystemCpuUsage());
+            left.second().nodeInfoSnapshot().processSnapshot().systemCpuUsage(),
+            right.second().nodeInfoSnapshot().processSnapshot().systemCpuUsage());
         }
         // use the result of the comparison
         return chain.result();
       }).orElse(null);
     // check if we found a prepared service
     if (prepared != null) {
-      return prepared.getFirst().provider();
+      return prepared.first().provider();
     } else {
       // create a new service
-      var service = CloudNet.getInstance()
-        .getCloudServiceFactory()
+      var service = CloudNet.instance()
+        .cloudServiceFactory()
         .createCloudService(ServiceConfiguration.builder(task).build());
       return service == null ? EmptySpecificCloudServiceProvider.INSTANCE : service.provider();
     }
