@@ -22,26 +22,25 @@ import de.dytanic.cloudnet.template.install.execute.InstallStepExecutor;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
-import org.jetbrains.annotations.NotNull;
+import lombok.NonNull;
 
 public class DownloadStepExecutor implements InstallStepExecutor {
 
   @Override
-  public @NotNull Set<Path> execute(
-    @NotNull InstallInformation installInformation,
-    @NotNull Path workingDirectory,
-    @NotNull Set<Path> inputPaths
+  public @NonNull Set<Path> execute(
+    @NonNull InstallInformation installInformation,
+    @NonNull Path workingDirectory,
+    @NonNull Set<Path> inputPaths
   ) throws IOException {
     var targetPath = workingDirectory.resolve(
-      Paths.get(installInformation.getServiceVersionType().getName() + ".jar"));
+      Path.of(installInformation.serviceVersionType().name() + ".jar"));
 
     ConsoleProgressWrappers.wrapDownload(
-      installInformation.getServiceVersion().getUrl(),
+      installInformation.serviceVersion().url(),
       stream -> Files.copy(stream, targetPath, StandardCopyOption.REPLACE_EXISTING));
     return new HashSet<>(Collections.singleton(targetPath));
   }
